--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,34 +1,25 @@
 ---
-title: 01/25每日播报｜美航母战斗群进入南中国海以回应中共对台湾的再次骚扰
+title: 朝鲜正在测试巡航导弹
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907724/)
+`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/1907881/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+信息来源： 德国法兰克福报网页版
 
-**2022-01-25**
+翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
 
-《路透社》台北1月24日报道，美国国防部周一表示，两个美国航母战斗群已经进入南中国海进行训练。这次行动时间恰逢台湾国防部报告中共派遣39架军机大规模入侵台湾西南防空识别区，这是自2021年10月份以来，中共入侵规模最大的一次。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/buerger-mit-mund-nasen-schutz.jpg)
 
-报道指出，美国海军舰艇经常在南中国海靠近中共占领的岛屿海域航行，并通过台湾海峡，以此挑战中共的主权要求，令北京方面感到愤怒。
 
-美国防部表示，美国海军“卡尔文森号”和“林肯号”两个航母战斗群已经于周日开始在南中国海展开行动。此前，这两个航母战斗群分别在菲律宾海与日本海进行演习。
+图片来源： FAZ
 
-美国国防部在一份声明中称，航母战斗群将开展包括反潜作战、对空作战和海上拦截在内的演习，以加强战备。训练将在国际水域按照国际法进行。
+据韩国军方称，自称拥有核力量的朝鲜可能至少发射了两枚巡航导弹。总参谋部说，导弹是在周二早上（当地时间）被击落的。武器试验将与美国一起进行更详细的评估。这些导弹飞了多远，降落在哪里，最初是未知的。
 
-周一，台湾国防部提供的地图显示，又有13架中共军机进入台湾西南防空识别区，其中一架运-8反潜飞机，飞越了巴士海峡，该海峡处于台湾和菲律宾之间，连接着南中国海和太平洋。
+与弹道导弹不同，巡航导弹不受朝鲜制裁。联合国决议禁止该国测试弹道导弹。通常，这些是地对地导弹，根据它们的设计，它们也可以携带核弹头。与弹道导弹不同，巡航导弹有自己的永久推进系统。
 
-台湾国防部补充说，中共两架电子攻击版本的新型歼-16D战斗机参加了此次任务，旨在打击台湾高度依赖的空中防御系统。
+自今年年初以来，朝鲜已多次试射导弹，因此受到美国及其盟国韩国和日本的新批评。据该公司称，测试中还使用了高超音速导弹。使用这种武器，可以从弹道导弹发射所谓的高超音速滑翔导弹。高超音速武器因其高速而难以拦截。
 
-此前，安全消息人士告诉路透社，中共派遣军机对台湾的骚扰，是对外国军事活动的回应，特别是针对台湾附近的美军，以警告外国军事力量，北京正在监控台海并有能力处理与台湾相关的任何突发事件。
+🔗[朝鲜正在测试巡航导弹](https://www.faz.net/aktuell/politik/ausland/nordkorea-testet-marschflugkoerper-17749744.html)
 
-秘翻主编  冰糖葫芦喵编译报道
-
-发布 :文橙
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
