--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,90 +1,153 @@
 ---
-title: 全球疫情更新（BMJ直指药厂欺诈史，要求公开数据）
+title: 喜币最牛的是系统，最稳定、合法、永远不会被提现提垮
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907608/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1907711/)
 
-**整理/编辑：枳实**
+[https://gtv.org/video/id=61edd98287664c47acd906f6](https://gtv.org/video/id=61edd98287664c47acd906f6)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2022-01-25-上午7.38.43.png)图片：雅典娜农场设计组 精灵蓝
+**郭文贵
+Miles Guo**
 
+喜币最值钱的地方在哪里
+Where are the most valuable things of HCoin?
 
-雅典娜疫情更新（2022年 1月25日）
+你看昨天、前天、大前天
+You can see that yesterday, the day before yesterday, and so on
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+它是1年365天，7天24小时在线
+It’s online 24/7 and 365 days a year long
 
-**一，全球疫情基本数据**
+全世界汇丰银行、美国银行、UBS银行
+HSBC, Bank of America, UBS Bank, all banks in the world
 
-感染总数：354,332,988（日新增3,329,963，14天增幅+29%）
+任何一家银行你去提现挤兑，百分之百都破产
+if you go to any bank to withdraw and run on them, 100% of them will face bankruptcy
 
-死亡总数：5,602,941（日新增8,198人，14天增幅 +21%）
+没有一家不破产的
+and none of them can get away with it
 
-**二，全球“疫苗”毒针统计数据**
+只有喜联储
+Only the Himalaya Exchange
 
-“疫苗”毒针注射总数：99.3亿
+你把你所有的HDO提走，它百分之百不会破产
+when you withdraw all of your HDO, 100% will not face bankruptcy
 
-完全“接种”：41亿人
+什么事都没有
+nothing will happen
 
-完全“接种”百分比：52.6 %
+美国的美联储竟然要接受
+The U.S. Federal Reserve actually wants to accept it
 
-**三，澳洲疫情和“疫苗”数据**
+说可以跟私人的稳定币就是喜美元HDO可以合作
+saying that they can cooperate with a private stable currency, which is the H-dollar HDO
 
-感染总数：2,287,646（今日新增46,845人）
+你知道这是多大的变化？兄弟姐妹们
+Brothers and sisters, do you know how big a change this is?
 
-死亡总数：3,230人（今日新增 76人）
+是天地之间的（转变）
+It’s the transition between earth and heaven
 
-每万人感染人数：886.888人
+它（美联储）不敢说消除所有的数字货币了
+It (the Federal Reserve) does not dare to say that it will eliminate all digital currencies
 
-“疫苗”毒针注射总数：48,377,727 （日新增322,467 针）
+它自己都在研究美元要数字货币化
+The Fed itself is studying the digital monetization of the US dollar
 
-完全“接种”：19,180,099人
+还要跟私人稳定币就是咱喜美元要联合
+and it will combine with the private stable currency, which is our HDO
 
-第二针“接种”百分比：78.3%
+喜币牛就牛在不是你英国的交易所
+The awesomeness of our HCoin is that it’s not the UK exchange
 
-16岁以上人口接种至少一剂疫苗的比例：&gt;95%
+人家是第三方国家澳大利亚交易所
+It’s is a third-party country Australian Exchange
 
-16岁以上人口接种至少两剂疫苗的比例：93%
+还有其他国家交易所
+and there are other national exchanges
 
-**四，评论摘译**
+不但如此
+Not only this
 
-英国医学杂志（BMJ）上周发表社论：[《COVID](https://www.bmj.com/content/376/bmj.o102)[疫苗和治疗，我们必须取得原始数据，立刻马上！》](https://www.bmj.com/content/376/bmj.o102)这篇文章十分罕见地指着大药厂的 鼻子斥责它们是“最不受信任的行业”，当然也把矛头指向了美，英，加拿大政府监管机构。这篇文章应该也能唤醒很多被“主流”媒体洗脑的人，全球疫苗注射总数都接近百亿剂了，可是原始数据到现在竟然全都没有公布！这就是所谓“安全”和“有效”吗？
+你看看接下来大家我跟你说的
+You’ll see the next what I have told you
 
-文章回顾了十年前流感流行期间，世界各国政府花费了数十亿美元来储存抗流感病毒药物，但这些药物被证明并没有降低并发症，住院，或者死亡。大多数有利于获得药物批准的实验都是由制造商赞助的，作者也由制造商付费，甚至离谱到连主要作者都没有访问原始数据的许可，要求访问原始数据进行独立分析的学者的要求当然也被拒绝了。
+喜币未来机构投资者公告的时候
+When announcing the institutional investors of HCoin in the future
 
-十年前的教训今日有所改进吗？不，事实证明，人类的记忆很短暂，尽管中共病毒疫苗和治疗在全球范围内迅速推进，但原始数据仍然无法为医生、研究人员和公众所获取，而且很可能在未来几年内仍然如此。
+如果你们要不害怕、不震惊、不从椅子上掉下来
+if you are not scared, not shocked, and not falling off from your chair
 
-辉瑞表示，直到 2025 年 5 月，即主要研究完成日期后 24 个月，它才会开始接受试验数据请求，Moderna 表示，“可能会提供数据……最终研究结果将在 2022 年公布。” 阿斯利康可能已准备好接受其几项大型 III 期试验的数据请求。但实际上获取数据可能会很慢，在完整提交请求后可能需要长达一年的时间。
+如果是东弟颖妹妹不流水流的像汪洋大海一样
+if Hao Haidong brother and Ye Zhaoying sister do not enjoy what they are doing
 
-对所有这些试验来说，这种做法在道德上都是站不住脚的，尤其是对于那些涉及重大公共卫生干预的试验。
+咱这事就算七哥放狗屁
+this matter will be considered Brother 7 (Miles Guo) is bullshit
 
-药厂如此，政府同样也不可信任。在向FDA要求提供辉瑞疫苗数据的信息自由后，FDA提出每月发布 500 页，这一过程需要数十年才能完成，并在法庭上辩称，由于需要首先编辑敏感信息，公开发布数据的速度很慢信息。然而，本月，一名法官拒绝了 FDA 的提议，并下令以每月 55 000 页的速度发布数据。数据将在请求组织的网站 ( https://phmpt.org/ ) 上提供。
+这个巨大的变化，你看看这个稳定币还有这个系统
+This huge change, take a look at this stable currency and it system
 
-大型制药公司是最不受信任的行业。在生产 中共病毒疫苗的众多公司中，至少有 3 家已经通过刑事和民事和解，造成了数十亿美元的损失。一家承认欺诈罪。其他公司没有疫情前的业绩记录。现在，新冠病毒大流行造就了许多新的制药业亿万富翁，疫苗制造商报告了数百亿美元的收入。
+我今天可以告诉大家还有20%（黄金）在这块搁着
+I can tell you today that there is also 20% (gold) sitting with it
 
-BMJ支持基于可靠证据的疫苗接种政策。随着全球疫苗的继续推广，让我们只信任“系统”是不合理的，也不符合患者和公众的最大利益，并希望基础数据可以在某些地方进行独立审查指向未来。这同样适用于 中共病毒感染的治疗。透明度是建立信任的关键，也是回答人们关于疫苗和治疗的有效性和安全性以及为其使用而制定的临床和公共卫生政策的合理问题的重要途径。
+人类上没有第二家
+and you cannot find another one among mankind
 
-十二年前，我们呼吁立即公布临床试验的原始数据。我们现在重申这一呼吁。当试验结果公布、发表或用于证明监管决定的合理性时，数据必须立即可用。在大流行期间，更加没有理由豁免公布数据的的更高要求。公众已通过大量公共研究资助购买了这些疫苗，并且是公众承担了疫苗接种带来的益处和危害的平衡。因此，公众有权利和资格获得这些数据，并由专家对这些数据进行审查。
+而且是多个法律管辖区约束
+And (HDO) is bound by multiple legal jurisdictions
 
-制药公司在没有对其科学主张进行充分独立审查的情况下获得巨额利润。监管机构的目的不是为了迎合富有的全球公司的节奏并进一步让它们获利，而是为了保护其人民的健康。我们需要所有研究的数据完全透明，为了公共利益，我们需要它，我们现在就需要它！
+而且我可以（说）最根本的这个稳定币你随时可以拿钱的
+and I can say the most fundamental of this stable currency is that you can take money at any time
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+你可以清零的
+and you can clear it
 
-数据来源：
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
-[Our world in data](https://ourworldindata.org/coronavirus-data)
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
-[covidlive.com.au](https://covidlive.com.au/)
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
-[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
+这是为什么现在几十个国家现在跟这个喜联储在谈这个执照的时候
+That’s why dozens of countries are now talking to the Himalaya Exchange about (their trading) license
 
-发布：tianzhihuan
+说你们到现在展现的是任何数字货币没有的系统
+saying that what you’ve shown so far is a system that no digital currency has
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+记住啊这个系统设计是七哥的创意
+Remember, this system design is the creativity of Brother 7 (Miles Guo)
+
+是最牛的
+It’s the best
+
+第二，是这个系统的合法性（是）最牛的
+Secondly, the legitimacy of this system is the best
+
+第三，它法律的设置在全球性它的法律安全性是最牛的
+Thirdly, its global setting and its legitimate security are the best
+
+还有一个
+There is one more
+
+它的稳定的整个储备系统是最牛的
+its stable entire reserve system is the best
+
+还有个绝对限制每年发行只有10亿个
+and there is also an absolute limit of only one billion (HCoin) issued per year
+
+* * *
+
+Date: 01/16/2022
+原视频标题:
+喜币最牛的是系统，最稳定、合法、永远不会被提现提垮
+The best thing about G Coin is its system, which is the most stable, legitimate, and will never go bankrupt with withdrawals
+原视频日期：2022/01/14
+原视频链接: [**https://twitter.com/jeff\_john\_sta/status/1482685155751964674?s=24**](https://twitter.com/jeff_john_sta/status/1482685155751964674?s=24)
+任务编号：KC429（3545）
+视频时间段 : 0:00-02:10
+英听校：洛杉矶盘古农场 – 郭班之樱
+翻译：洛杉矶盘古农场 – 郭班之樱
+翻译终校：洛杉矶盘古农场 -Mike Li
+字幕+视频制作：洛杉矶盘古农场-Jambo
+审片：洛杉矶盘古农场-银龙
+发布 : 洛杉矶盘古农场-恩典
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
