--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,27 +1,21 @@
 ---
-title: 中共国掌握欧洲港口和机场的安全
+title: 七哥回忆1120跟班农先生的经历（上）
 ---
-`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1907566/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907686/)
 
-翻译/整理：萧亦
-![](https://assets.gnews.org/wp-content/uploads/2022/01/01252.jpg)图片来自la repubblica.it
-欧洲港口和机场的安全，从阿姆斯特丹到雅典，还有佛罗伦萨、比萨和威尼斯都掌握在一家由国家部分控制的中共国公司手中，据美联社报道，该公司与北京军队和共产党最高层有密切的关系。
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥回忆1120跟班农先生的经历（上）-scaled.jpg)
+2018年的11月20号，我和班农先生以及咱们很多战友们一起举行的爆料革命有史以来的第一个新闻发布会，在三年之后的今天，当我坐在这里，我和班农先生今天早晨见面，我心情很激动，班农先生属于爱尔兰人， 血比较冷，但是他也是比较热血的人。他昨天一直在跟我说我们是1120, 3年纪念日。班农先生是一个我看过西方人里比较热血的人，我知道他在 说什么，我们当然心都是通的，这种感触，很多战友曾经亲身经历过， 但是你们没法体会，很难理解我们当年，班农先生我们一起走过的路，当我和班农先生谈论海航这件事时，作为一个西方大师级的政治家，班农先生是很难相信这种事情是真的发生了的，几乎是我跟他沟通，每一次， 一次一次打破班农先生对整个中国政府和共产党以及共产党对西方的这种渗透的结果，都让他有了新的认知。直到2018年，大概8月份到9月份的时候，我给他讲述在法国的这个结果之后，然后呢，我说我们将会开一个新闻发布会，发现班农先生的第一句话就是“不可能，绝对不可能。ImpossibIe, brother. You are Crazy.”然后呢？我让他看文件啊，他也感到很吓人。
 
-对在中共国与其他八个欧洲国家之间进行的长期调查中，发现来自中共国的一家名为“同方威视”的公司在很短的时间内迅速成为了世界上排名第一的金属探测器和货物及车辆扫描仪的公司。不仅是在港口和机场，北约与俄罗斯的边界以及2020年达沃斯世界经济论坛上都使用了该设备。
+*发布：开智则立*
 
-由于这些原因，今天该公司被排除在美国市场之外，但是根据相关文件显示，这家公司深植根于欧洲大陆：在 27 个成员国中的 26 个国家使用该公司的产品。但其所有权结构的复杂性和不透明性也在欧洲引起不少人的注意：西方官员和政界人士认为，风险在于中共国可能利用同方威视设备破坏关键中转站或非法获取政府、工业或个人数据。
-
-2009 年，该控制了 90% 的中共国国内市场。在 1999 年向中共国海关出售其监控系统后，与澳大利亚和阿拉伯联合酋长国签订了第一份国际合同。如今，它在 170 个国家/地区开展业务。公司生产的X射线扫描仪近年来已在众多世界公共活动中使用：从2015年米兰世博会到同年温布尔登网球锦标赛再到2014年巴西世界杯和两届奥运会。
-
-2019年，同方威视已在欧洲为海关、民航、港口和政府机构安装了1000多台扫描仪。与俄罗斯接壤的五个北约成员国中的爱沙尼亚、拉脱维亚、立陶宛、波兰都已经购买了同方威视设备用于过境。以及欧洲的两个主要港口：鹿特丹和安特卫普。
-
-一位美国政府官员对美联社说：“北京正在利用国家支持的公司以低价进入关键的欧洲基础设施：民用机场、旅客安检、海港和货物安检。共产党政府可能会利用同方威视在欧洲的存在来收集跨境贸易流动的大数据，从本地网络中提取信息，例如航运数据或乘客信息，或者在发生冲突时破坏贸易流动。”
-
-荷兰公司 Datenna 试图解开公司内部运作人员的纠结，该公司通过在四个参与级别上找到十几个主要实体（包括四个国有企业和三个政府实体）来绘制同方威视的所有权结构。大股东为同方公司，持股71%。而同方的最大股东是中国核工业集团公司（CNNC）的投资部门，这是一家由中共国国务院政府控制的国有能源和国防企业集团。美国国防部将 CNNC 归类为中共国军事公司，因为它与中共国人民解放军共享技术和专业知识。
-
-原文链接：[https://www.repubblica.it/esteri/2022/01/25/news/la\_cina\_mette\_le\_mani\_sulla\_sicurezza\_dei\_porti\_e\_aeroporti\_europei-335144077/](https://www.repubblica.it/esteri/2022/01/25/news/la_cina_mette_le_mani_sulla_sicurezza_dei_porti_e_aeroporti_europei-335144077/)
-
-责任编辑/发布：意大利达芬奇农场   萧亦
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
