--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,23 +1,48 @@
 ---
-title: 俄罗斯向乌克兰的边境派遣了更多军队
+title: 北京冬奥会泡泡集中营是最无趣赛事
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907667/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1907793/)
 
-##### 翻译：Julia Gao
-校对：Lish
-剪辑|字幕：向上James
-编辑：Mttfly
+作者：纽约香草山福音部 – melisa
 
-据ABC新闻报道，美国国务卿布林肯重申，面对俄罗斯越来越多的威胁，我们支持乌克兰的主权。新发布的一段视频显示乌克兰军队在其东部边境训练，高度警戒。美国官员警告说，已有超过10万名俄罗斯士兵在边境集结。拜登政府认为俄罗斯特工已经进入乌克兰境内，并可能很快计划上演和发生所谓的“栽赃”行动，然后普京将利用这些行动作为入侵的借口。美国国家安全顾问贾克·苏利文认为，俄罗斯正在试图用网络捣毁乌克兰。白宫表示将对俄罗斯继续制裁，克里姆林宫新闻发言人杜米特里·佩斯科夫则表示制裁解决不了问题。
 
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/09/GNEW-GTV-MOS-LOGO-2-2-1-1-400x54-1.jpeg)
+
+
+
+2022年2月4日第24届冬奥会将在中共国的国家体育场开幕。
+
+中共霸占的北京将成为世界上首个既有奥米克戎病毒，又有政治冬奥会的“双奥之城”。
+
+2022年中共政治冬奥会的奖牌造型体现了中共政治冬奥会的反人类，迫害人权，种族灭绝，制毒放毒然后甩锅的邪恶。2022北京冬奥会开幕歌曲叫做《用尽我的一切奔向你》，中共确实把全人类的一切都剥夺了，全人类都被剥夺得体无完肤了，必须得用尽一切奔向你中共追责。
+
+欧洲议会周四通过了香港基本自由遭受侵害的相关决议，强烈谴责香港人权及言论自由的恶化，呼吁制裁相关官员，并敦促欧盟抵制北京冬奥会。2022年1月21日郭文贵先生在大直播中宣告：中共的北京魔鬼冬奥会即将彻底破产！冬奥会要成冬眠会。
+
+在七哥唯真不破坚持不懈的揭露下，西方各国政要、精英、体育界、文化界等各界人士，终于认清中共为一党私力，利用冬奥会迫害中国人民，残忍屠杀动物的魔鬼本质。
+
+准备去趟中共北京冬奥会混水的人，抛弃冬奥吧，不要再参与中共的魔鬼盛宴了，免得你们世世代代被钉在历史的耻辱柱上。还在准备去2O22北京冬奥会的世界名流和运动员们可要小心了，中共给你们准备的美味，你怎么就知道不是被屠杀的几百万狗的肉呢？中共在冬奥会开始前两周又恢复了肛门试子检测，你愿意去给人捅肛门吗？中共还给你们准备了所谓的闭环的泡泡集中营呢。
+
+中共是人类历史上最邪恶政权，是跨国犯罪组织，它制造并释放了病毒，使得病毒在全世界蔓延，请运动员们认清中共的邪恶手段和本质，否则后果难以预测。
+
+2O22年1月24号
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/jan2022.jpg)
+
+
+
+编辑/校对/发稿：武裝的羔羊
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
