--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,21 +1,25 @@
 ---
-title: 乌克兰，8500名美军处于戒备状态
+title: 七哥回忆1120跟班农先生的经历（中）
 ---
-`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1907621/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907714/)
 
-翻译、整理：萧亦
-![](https://assets.gnews.org/wp-content/uploads/2022/01/01251.jpg)图片来自gazzettadelsud.it
-五角大楼已将 8500 名士兵置于高度戒备状态，以便他们可以在数小时内部署到欧洲。紧接着，拜登总统召集包括意大利总理德拉吉在内的盟友讨论共同努力以阻止俄罗斯进一步的侵略。
+#### 整理：雅典娜速记组
+编辑：开智则立
+![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥回忆1120跟班农先生的经历（中）-scaled.jpg)
+后来我们多次交流，就在我们旁边的办公室，我们大概从下午工作一直到第2天的五点钟，就看那些文件，班农先生就开始设计：如果要开发布会啊，那个墙上，这个照片missedwall （消失人群的照片墙）。班农先生那种激情，一个字一个字地看，这哪来的，这什么信息，他要确认每一条信息，这个过程实在是，今天想起来，我听你们问问题时，我就在想曾经的那一幕。兄弟姐妹们，没有一件事情不包含着泪水、 鲜血和付出，甚至生命，它会诞生所谓的伟大和正义，没有一件事情。 那种感觉你们是今天完全想象不到的。班农先生，今天第一感觉就是当年我们租林肯中心，我们要签合同，林肯中心的董事就是陈国军，陈锋的哥哥，然后就给我们取消了。班农先生不明白为什么这么干，我说这叫中国人的指东打西。班农先生最喜欢的就是皮尔酒店，我说我们去皮尔酒店。班农先生作为一个在美国的美国人受中共特务这么欺负，他是白宫的美国大师，一个中国的Spy就能把班农推到外面去，你看这有多夸张是吧。
 
-持续升级的明确信号可能有两个目标：首先，劝阻普京放弃即将入侵的想法，因为后果将是灾难性的; 第二，认真加强对盟国的保护，以便在俄罗斯如果最终袭击基辅后做好自卫的准备。
+*发布：开智则立*
 
-同时，北约宣布与丹麦的行动，将向立陶宛派遣一艘护卫舰和四架F-16战斗机，而西班牙和荷兰将在保加利亚和法国在罗马尼亚部署更多部队。同时，杜鲁门号航空母舰已抵达地中海，参加预定于 2022 年举行的海王星打击演习。
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-美国国务院已下令从基辅撤离非必要的外交人员，并敦促美国平民离开该国，英国紧随其后，而德国和澳大利亚也准备了类似的措施。同时美国驻联合国总部大使托马斯·格林菲尔德表示说外交仍然是第一选择。
 
-原文链接：[https://www.repubblica.it/esteri/2022/01/24/news/ucraina\_in\_allerta\_8\_500\_soldati\_usa\_biden\_chiama\_gli\_alleati\_in\_europa-335124813/?ref=RHTP-BH-I322793271-P3-S2-T1](https://www.repubblica.it/esteri/2022/01/24/news/ucraina_in_allerta_8_500_soldati_usa_biden_chiama_gli_alleati_in_europa-335124813/?ref=RHTP-BH-I322793271-P3-S2-T1)
 
-责任编辑/发布：意大利达芬奇农场   萧亦
+
 
  
 
