--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,26 +1,23 @@
 ---
-title: 一个一感冒就要挨饿的地方
+title: 比特币、以太坊：跌跌不休，喜币：稳扎稳打、蓄势待发
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907461/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1907657/)
 
-##### 翻译：Julia Gao|Warren Wang
-校对：枳实
-剪辑|字幕：蛮吉
-编辑：Mttfly
+撰稿：东京樱花团｜闻雨
+![](https://lh4.googleusercontent.com/SDF_YeKTPqoKQvwxUElN4bfWjuJed-v6Uqy0qWe7s3mDn9suyXnQgX81sRogtaNxuxuDxXFuQPeurpR0EI88KedBlYRYvaDKt3Mvq_aoRkQ_NC7kYoOUxsX4UYvcrXpowwCES3pd)[*图片来源*](https://himalaya.exchange/trading)
+美国时间1月24日上午，比特币的价格跌至2021年11月最高水平的一半左右，目前比特币的价格在3万4千美元以下，比1月21日又下跌了约10%。
 
-视频用陕西方言讲述了西安疫情爆发的前前后后。郭文贵先生爆料，冠状病毒是阻止香港人上街参加反送中运动的。疫苗是共产党的生化武器。陕西书记给陕西人打的疫苗浓度是最高的，打两针相当于河南人打十针。只有灭掉中国共产党，才能解救身处疫苗灾难中的同胞。
+比特币并不是唯一下跌的虚拟货币，据CNBC 1月24日报道，包括比特币在内的一些数字货币在上周末暴跌，整个虚拟货币市场在过去24小时内损失了约1千3百亿美元。
 
-视频链接：[郭先生盖特](https://app.gettr.com/post/pmi87dd11f)
+以太币在12月的大部分时间里都在4千美元左右徘徊，整个1月份一直在下跌，在24日短暂地触及2100美元大关。
 
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+纵观整个虚拟币、数字货币市场，唯有喜币（HCN）一直保持在41美元左右，稳健成长。因为喜币有世界上最严格的KYC，它又有即将上线的喜支付（Hpay），有冷钱包、热钱包，是目前唯一的合法合规且有无限价值潜力的数字货币。今后也只有这种合法的数字币才会有美好的前途，Hcoin To the Moon！机不可失，失不再来，希望您能赶上这班车！
 
+信息来源：[**ビットコイン、一時はピーク時の半値に**](https://news.yahoo.co.jp/articles/7f7452f421a51220de8b432fcf0f44ec1fb27aa8)
+
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
