--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,32 +1,29 @@
 ---
-title: 01/25每日播报｜美国顶级医生敦促公众停止接种中共病毒疫苗
+title: 饮食业主的悲鸣，国家缩短营业时间的政令应明确化
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907457/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1907644/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+撰稿：东京樱花团｜haruka春香
+![](https://lh3.googleusercontent.com/QoTy5-oaV88v-7U5PWiLPilELbYfCR4qJ6c8QTYr7pyQv4Hv9qAXcOvP_QpP8inhbjPMbilyLG0eWdmL72nYEeMrGlC4Kj_TzJK0GpLG5l1SJ7NEmkoIJgpJUvSlo5TE8QMZuQe7)[*图片来源*](https://news.yahoo.co.jp/articles/84f4d3da8d0125f6d24bd68457ce51db999826c6/images/000)
+随着中共病毒（冠状病毒）感染的迅速扩散，福冈县1月24日根据自身冠状病毒警报，开始向饭店提出“短时经营”（缩短营业时间）的要求，很多店铺提前了关门时间，距离上次请求解除不过3个月，餐饮行业传出了“请放过我”的悲鸣。政府要求的防止蔓延等重点措施的佐贺、大分、鹿儿岛等3个县也即将开始缩短营业时间，并扩大到九州全县。另外，有人发牢骚说政府在应对新变种病毒上出现了混乱。
 
-**[2022-01-25](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+“现在是第几次要求缩短营业时间的？”在北九州市小仓北区经营日式餐厅“黑田节”的店主流上诚治（49岁）叹了口气，该店获得了防止感染对策的认证，提供酒水的营业时间只能到晚上9点。
 
-《网关专家》1月24日报道，美国内科医生、心脏病专家、流行病学家和中共病毒灾难医疗应对的领导者彼得·麦卡洛博士（Peter McCullough），敦促公众停止接种中共病毒疫苗。他指出，在世界范围内，疫苗计划适得其反，那些疫苗接种率最高的国家，死亡率也最高。
+上次解除“缩短营业时间”要求后，客人陆续开始回来了，年末年初店铺的预约表也已经排满，可是从1月24日开始，预约表上又出现了很多空白。
 
-周日，麦卡洛在华盛顿特区举行的 “击败强制 “集会上告诉《网关专家》，那些已经接种过一到两剂中共病毒疫苗的人，如果再接种第三剂，将大大增加身体器官衰竭或致命的风险。他强烈反对会在身体的大脑、肺、心脏、骨髓和生殖器官中产生刺突蛋白的“基因疫苗”。
+政府内部围绕会餐等限制人员和抑制人流问题出现了混乱。根据重视哪一方，今后所要求的对应方式也会有所不同。希望国家明确方针。
 
-德克萨斯州的一位医生表示，市面上的辉瑞、莫德那、强生和阿斯利康基因疫苗所含的刺突蛋白在体内持续的时间比人们想象的要长得多，而且都聚集在重要部位，包括大脑、肺、心脏、骨髓和生殖器官。
+在福冈市中央区的炸串店“串カツあらた”天神店，下午6点多就有闲古鸟在鸣叫（不来客人的谚语）。店长切通雄太（29岁）表示：“年末年初的预约本以为满了，没想到这次缩短经营时间要求又来了。”
 
-这位医生还建议，在没有找到方法排出那些刺突蛋白前，不要再接种这种基因疫苗了。因为人体内的刺突蛋白会逐渐积累，无法自动排出体外。它几乎肯定会导致慢性疾病甚至是死亡。
+缩短营业时间到2月20日为止，但店主们都担心“会再次延长”。大分县去年先后两次自主“短时经营”的要求，此次是第一个重点措施的县，计划于25日发表“短时经营”要求的详细内容。进入今年以来，大分市中央街的酒吧内顾客骤减，平日的营业额甚至为零。店主60多岁的一位男子透露：“经营完全入不敷出，只能靠政府的补助金帮助（度过困难）。”一位和家族经营鸡肉料理餐厅的40多岁女性说：“感觉终于又来了，我们会按照要求继续营业，我们将尽最大努力度过难关。”
 
-麦卡洛博士警告说，不仅中共病毒疫苗是危险和致命的，而且全美国的医院都在危险地遵从一个中共病毒治疗方案，这会令住院的感染病人必死无疑。现在，这些方案已经被评估是不可信的。
+24日晚的福冈天神地区，很多下班后匆匆回家的人，在等公交汽车的一位男性上班族（49岁）表示：“儿子正在准备大学考试，因此想确保他预防不被感染。”
 
-据报道，所谓治疗方案是指，医院通常会给中共病毒阳性患者使用损害肾脏和肝脏的 “瑞德西韦”，随着患者的健康状况下降，遵循此方案的医生会对他们负责治疗的患者实施气管插管，这一过程可能会导致患者死亡。
+信息来源：[**「もう勘弁して」「国は方針を明確に」時短要請、飲食店から悲痛な声**](https://news.yahoo.co.jp/articles/84f4d3da8d0125f6d24bd68457ce51db999826c6)
 
-（ 秘翻新闻主编  冰糖葫芦喵编译报道 ）
-
-发布 :星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
