--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,38 +1,68 @@
 ---
-title: 短视频：疫苗杀戮还在继续，人类繁衍遭受威胁
+title: 德州刑指控COVID疫苗制造商和推动者犯谋杀和反人类罪
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907456/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1907643/)
 
-翻译：不要代表我Kari
-校对：精靈藍
-剪辑字幕：蛮吉
-编辑：文泓
+编译: Jenny Ball
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/疫苗-2-3.png)图片来源：视频截屏
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2071.png)图片来源：newstarget.com
 
+上周向德克萨斯州总检察长肯·帕克斯顿办公室提起的大规模刑事诉讼，指控 COVID-19 疫苗的制造商，以及所有参与推动和分发疫苗的公司和政府官员犯有“谋杀”和“反人类罪”。
 
-好吧，现在是2022年1月5日，我试着总结一下这些疫苗（灾难）的情况是多糟糕。因为不是每个人都能明白，这已经太迟了——对于全世界的15亿人来说，他们将慢慢死去。
+该投诉由哈里斯县居民杰克·博特勒（Jack E. Boteler）提出，他代表“所有利益相关方和订阅的美利坚合众国公民和居民，他们接受了紧急使用授权的研究注射遗传生物材料（mRNA 或腺病毒 DNA）编码武汉刺突蛋白，已知是 SARS-CoV-2 的致病结构，**旨在激发人体产生针对 ****Covid 19 ****的抗体，被称为****“****Covid 19 ****疫苗****”****。**
 
-在接下来的几年里，还有大约15亿人（实际上稍微更多些）将遭受疫苗带来的严重伤害。而且他们可能无法真正融入社会，换言之，他们很可能无法工作，将需要被照顾。
+投诉中特别提到的一些人包括：
 
-要知道，会出现很多病患，很多残疾：他们的心脏受损、神经损伤以及自身免疫（系统）损伤。然后，另外大概1/3左右的人，在这之后幸存下来。你知道，也就是说15亿人接种了疫苗，但不会（完全）被疫苗杀死或伤害。
+——美国国家过敏症和传染病研究所所长、乔·拜登总统的首席医疗顾问安东尼·福奇博士（Antony Fauci）；
 
-而这1/3的人将不得不照顾另外1/3的人，你知道，那些因疫苗受伤的群体，并处理前面所说的因疫苗而死的那1/3的人群的问题。
+——乔治·索罗斯（George Soros），亿万富翁金融家和全球主义反革命分子
 
-然后谈谈未接种疫苗的人，未接种疫苗的人将是这个世界最后的依托。未接种疫苗的人将不得不重建社会，他们将不得不学习如何管理核电站并确保它们不会发生熔毁。
+— 德博拉·伯克斯(Deborah Birx)博士，川普总统的白宫冠状病毒应对协调员
 
-未接种疫苗的人将不得不肩负繁衍生息（的重任），为这个星球创造可持续发展的人类。
+——WTO组织总干事谭德塞(Tedros Adhanom Ghebreyesus)
 
-视频链接：[It’s already TOO LATE for nearly 1.5 billion human beings who may DIE from covid vaccines (bitchute.com)](https://www.bitchute.com/video/bCQ396TtUyaG/)
+——美国国立卫生研究院前所长弗朗西斯·柯林斯(Francis Collins)博士
 
-发布：文泓
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+——CNN创始人、亿万富翁媒体大亨特德·特纳(Ted Turner)
 
+——亿万富翁微软创始人和著名的疫苗推动者比尔·盖茨(Bill Gates)
+
+— 食品和药物管理局卫生(FDA)与公众服务部的主管和负责人；NIH、NIAID 和其他几个美国政府机构；
+
+— 大型制药公司
+
+— 与制造、营销和分发 COVID 疫苗有关的任何其他人。
+
+博特勒的诉状继续说：“本诉状指控基于一系列**事实、观察、专家意见、媒体报道和目击者证词中产生的谋杀和危害人类罪**。”
+
+“这将表明，联合被告和/或严厉地计划和执行了生物战毒素的开发和释放，本文称为“SARS-CoV-2”或“Covid-19”和/或“刺突”蛋白质成分具有双重目标：
+
+1）全球人口减少，
+
+2）通过引起恐慌、经济困难、恐怖、死亡和伤害全球人口来控制人口，从而导致一个世界政府，”它补充道。
+
+博特勒还解释说：
+
+通过使用心理战机制，包括但不限于媒体报道、公共政策、胁迫、欺骗、授权、贿赂、旅行限制、就业限制、言论自由限制和自由限制，本诉状还将表明，被告试图诱导全球人群接受预先计划的实验性基因治疗，通称为“Covid-19 疫苗”，以促进其上述目标。
+
+投诉随后列出了针对福奇、盖茨和其他被列为被告的人的案件，引用了大量数据、几份报告和跨越数十年的事件时间表，并导致投诉称有目的地在中国武汉的实验室制造后并释放 SARS-CoV-2。它还引用了福奇涉嫌资助“获得功能研究”来制造高传染性病毒，表面上是为了研究目的。
+
+它还引用了报道的福奇对当选的川普的警告：“毫无疑问，他执政期间传染病将有挑战……我非常有信心的是，我们将在未来几年看到这一点（大传染病）。”
+
+起诉书的结论是：“此处提供的大量信息，其中大部分是无可争议的事实，提供了足够的可能理由相信，一名或多名指定被告犯下了本刑事起诉书中指称的罪行，特别是通过实施危害人类罪进行的大规模谋杀。”
+
+诉状称，被告“ 针对COVID-19 的创建，有“计划、协调、勾结，并在两个或多个命名和未命名的被告之间合作设计了一个犯罪企业”，并补充说，他们还合谋制造了一种生物武器，该武器最终被释放到了全世界。
+
+**评论：人在做，天在看！“他们还合谋制造了一种生物武器，该武器最终被释放到了全世界”屠杀上百万无辜人民，罪责难逃。**
+
+素材链接：[newstarget.com][Criminal complaint filed in Texas accuses COVID-19 vaccine makers and pushers of “murder” and “crimes against humanity”](https://www.newstarget.com/2022-01-23-criminal-complaint-filed-covid19-vaccine-makers-murder-crimes-against-humanity.html)
+
+* * *
+
+*审核：文乐
+校对：小东
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
