--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,24 +1,89 @@
 ---
-title: 1.24大直播后记: 清风看守所的老师们
+title: 全球疫情更新（BMJ直指药厂欺诈史，要求公开数据）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907439/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907608/)
 
-整理：雅典娜速记组
-编辑：Rianna
+**整理/编辑：枳实**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/BWNK1_1X27NIYGAOUF.png)图片来源：雅典娜农场设计组
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2022-01-25-上午7.38.43.png)图片：雅典娜农场设计组 精灵蓝
 
 
-清风看守所里有幸存的人，还跟郭文贵保持联系。 其中有个幸存者是一位老师，他已经出来了。 当时隔壁号的一个女囚长，当时判了死刑的，不能想象一个判了死刑的女孩，被剃光了头的女性出来以后，跟那位老师结婚了。郭文贵正在说服他这个老师出来直播，他确实年龄大了，确认已经70多岁，郭告诉他你就站出来，跟大家讲讲在咱号里边发生的那些义士，和隔壁我的师母怎么扔这个月经纸过来，就讲讲这一段就行，他笑的都不行！肯定有一天，我们一定会看到他，会很惊讶。 一个这样的人，当年他能出来，而且出来以后发生了很多的事情。这个人不是一般的人，当时是河南大学的一位教授。 被抓起来时候，他是最早发起河南大学支援山东去抗议的，这非常有意思。而且那个师母现在非常棒，有很多时候师母会在网页下面给郭文贵留言。所以说我们这个爆料革命它的魅力就在这里。像这个师母和老师就说，你看现在咱们的这些中国女性站出来，还有中国的男人站出来。 他说在爆料革命最重要的是大家都很开心，他们是最有感觉的，那时候都准备要随时死掉的人，还能活着出来。 现在我们没有什么抱怨的，失去什么的时候都不会觉得有什么了不起；背叛的时候也没有觉得有什么了不起的。为什么？那时候清风看守所里边天天有人举报，今天报告首长有紧急事情就是举报，私下号子（囚室）里边给你讲讲案情，哪个人在外边碰过摸过小姑娘，在外面偷过谁家钱，他就马上举报立功。谁都想立对方的功，立了功以后就可以减刑或者出狱，你知道在里边的背叛文化，没呆过是不懂得，没有比郭文贵看得再透了。都快死的人都快枪毙的人，还立人家功呢！郭文贵曾经有时候跟师母聊天，她说文贵我们最懂你在说啥。想想那些欺民贼伪类还有路大脑袋、什么鸡腿潘他背叛我，跟在看守所比，那数都数不清有多少次被人家立功。 有的人进去以后讲点事会立即举报，一立功就出去了。 知道一举手一立功，马上先给你调号，你一说立功出来，拿着你的被子拿着东西走给你调号。那郭文贵使了这个聪明，他在2，3个月内看谁不顺眼，赶快去立功去，一立功就离开郭文贵那边囚室，不用揍了也不开庭。当时郭文贵的智慧已经很大，能把那狱警、武警玩得团团转。他在看守所把民主自由给整明白了，又把推翻独裁政权和共产党整得更清楚，宗教这一块更厉害：有穆斯林、有天主教、有基督教、佛教、道教都有，怎么可能一个人的囚室里有那么多高人进来？那里边的老师对他带来最大的影响，就是人家老师在恐惧在准备死亡前所有的智慧都更高、更真实。看守所里不但一个还有好几个是被判了监，判了无期20年、15年的都放出来了，都在国内，这个是未来一大场戏。 郭文贵的狱友监友，还有他监狱的老师出来，那有深刻意义。
+雅典娜疫情更新（2022年 1月25日）
 
-资料来源：郭先生GTV和盖特直播视频。
+[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
 
-发布： *tianzhihuan*
+**一，全球疫情基本数据**
 
-更多资讯，请关注：
+感染总数：354,332,988（日新增3,329,963，14天增幅+29%）
+
+死亡总数：5,602,941（日新增8,198人，14天增幅 +21%）
+
+**二，全球“疫苗”毒针统计数据**
+
+“疫苗”毒针注射总数：99.3亿
+
+完全“接种”：41亿人
+
+完全“接种”百分比：52.6 %
+
+**三，澳洲疫情和“疫苗”数据**
+
+感染总数：2,287,646（今日新增46,845人）
+
+死亡总数：3,230人（今日新增 76人）
+
+每万人感染人数：886.888人
+
+“疫苗”毒针注射总数：48,377,727 （日新增322,467 针）
+
+完全“接种”：19,180,099人
+
+第二针“接种”百分比：78.3%
+
+16岁以上人口接种至少一剂疫苗的比例：&gt;95%
+
+16岁以上人口接种至少两剂疫苗的比例：93%
+
+**四，评论摘译**
+
+英国医学杂志（BMJ）上周发表社论：[《COVID](https://www.bmj.com/content/376/bmj.o102)[疫苗和治疗，我们必须取得原始数据，立刻马上！》](https://www.bmj.com/content/376/bmj.o102)这篇文章十分罕见地指着大药厂的 鼻子斥责它们是“最不受信任的行业”，当然也把矛头指向了美，英，加拿大政府监管机构。这篇文章应该也能唤醒很多被“主流”媒体洗脑的人，全球疫苗注射总数都接近百亿剂了，可是原始数据到现在竟然全都没有公布！这就是所谓“安全”和“有效”吗？
+
+文章回顾了十年前流感流行期间，世界各国政府花费了数十亿美元来储存抗流感病毒药物，但这些药物被证明并没有降低并发症，住院，或者死亡。大多数有利于获得药物批准的实验都是由制造商赞助的，作者也由制造商付费，甚至离谱到连主要作者都没有访问原始数据的许可，要求访问原始数据进行独立分析的学者的要求当然也被拒绝了。
+
+十年前的教训今日有所改进吗？不，事实证明，人类的记忆很短暂，尽管中共病毒疫苗和治疗在全球范围内迅速推进，但原始数据仍然无法为医生、研究人员和公众所获取，而且很可能在未来几年内仍然如此。
+
+辉瑞表示，直到 2025 年 5 月，即主要研究完成日期后 24 个月，它才会开始接受试验数据请求，Moderna 表示，“可能会提供数据……最终研究结果将在 2022 年公布。” 阿斯利康可能已准备好接受其几项大型 III 期试验的数据请求。但实际上获取数据可能会很慢，在完整提交请求后可能需要长达一年的时间。
+
+对所有这些试验来说，这种做法在道德上都是站不住脚的，尤其是对于那些涉及重大公共卫生干预的试验。
+
+药厂如此，政府同样也不可信任。在向FDA要求提供辉瑞疫苗数据的信息自由后，FDA提出每月发布 500 页，这一过程需要数十年才能完成，并在法庭上辩称，由于需要首先编辑敏感信息，公开发布数据的速度很慢信息。然而，本月，一名法官拒绝了 FDA 的提议，并下令以每月 55 000 页的速度发布数据。数据将在请求组织的网站 ( https://phmpt.org/ ) 上提供。
+
+大型制药公司是最不受信任的行业。在生产 中共病毒疫苗的众多公司中，至少有 3 家已经通过刑事和民事和解，造成了数十亿美元的损失。一家承认欺诈罪。其他公司没有疫情前的业绩记录。现在，新冠病毒大流行造就了许多新的制药业亿万富翁，疫苗制造商报告了数百亿美元的收入。
+
+BMJ支持基于可靠证据的疫苗接种政策。随着全球疫苗的继续推广，让我们只信任“系统”是不合理的，也不符合患者和公众的最大利益，并希望基础数据可以在某些地方进行独立审查指向未来。这同样适用于 中共病毒感染的治疗。透明度是建立信任的关键，也是回答人们关于疫苗和治疗的有效性和安全性以及为其使用而制定的临床和公共卫生政策的合理问题的重要途径。
+
+十二年前，我们呼吁立即公布临床试验的原始数据。我们现在重申这一呼吁。当试验结果公布、发表或用于证明监管决定的合理性时，数据必须立即可用。在大流行期间，更加没有理由豁免公布数据的的更高要求。公众已通过大量公共研究资助购买了这些疫苗，并且是公众承担了疫苗接种带来的益处和危害的平衡。因此，公众有权利和资格获得这些数据，并由专家对这些数据进行审查。
+
+制药公司在没有对其科学主张进行充分独立审查的情况下获得巨额利润。监管机构的目的不是为了迎合富有的全球公司的节奏并进一步让它们获利，而是为了保护其人民的健康。我们需要所有研究的数据完全透明，为了公共利益，我们需要它，我们现在就需要它！
+
+[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+
+数据来源：
+[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
+[Our world in data](https://ourworldindata.org/coronavirus-data)
+[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
+[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
+[covidlive.com.au](https://covidlive.com.au/)
+[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
+[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
+
+发布：tianzhihuan
+
+**更多资讯，请关注：**
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
