--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,12 +1,12 @@
 ---
-title: 七哥回忆1120跟班农先生的经历（中）
+title: 为法治做斗争
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907714/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907866/)
 
 #### 整理：雅典娜速记组
 编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥回忆1120跟班农先生的经历（中）-scaled.jpg)
-后来我们多次交流，就在我们旁边的办公室，我们大概从下午工作一直到第2天的五点钟，就看那些文件，班农先生就开始设计：如果要开发布会啊，那个墙上，这个照片missedwall （消失人群的照片墙）。班农先生那种激情，一个字一个字地看，这哪来的，这什么信息，他要确认每一条信息，这个过程实在是，今天想起来，我听你们问问题时，我就在想曾经的那一幕。兄弟姐妹们，没有一件事情不包含着泪水、 鲜血和付出，甚至生命，它会诞生所谓的伟大和正义，没有一件事情。 那种感觉你们是今天完全想象不到的。班农先生，今天第一感觉就是当年我们租林肯中心，我们要签合同，林肯中心的董事就是陈国军，陈锋的哥哥，然后就给我们取消了。班农先生不明白为什么这么干，我说这叫中国人的指东打西。班农先生最喜欢的就是皮尔酒店，我说我们去皮尔酒店。班农先生作为一个在美国的美国人受中共特务这么欺负，他是白宫的美国大师，一个中国的Spy就能把班农推到外面去，你看这有多夸张是吧。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/为法治做斗争-scaled.jpg)
+美国是最先进的民主，民主其实来自于英国、欧洲几千年了，内战经历太多了，你看到我们不是完美的，我们现在有选举的问题，机器的问题，人工智能的问题，我们每天也在斗争，所以民主是每天斗争的意思，我们每天也在与法治作斗争，这种斗争全都在你面前， 所以，文贵给你展示的所有这些，会让你变得更加自信和有能力。
 
 *发布：开智则立*
 
@@ -16,10 +16,6 @@ title: 七哥回忆1120跟班农先生的经历（中）
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
-
-
-
 
  
 
