--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,17 +1,20 @@
 ---
-title: 文·贵天成 – “爆料革命”盘古开天地（四）
+title: 一个一感冒就要挨饿的地方
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907417/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907461/)
 
-#### 整理：澳雅大直播工作组视频剪辑小队
+##### 翻译：Julia Gao|Warren Wang
+校对：枳实
+剪辑|字幕：蛮吉
+编辑：Mttfly
 
-因为当时是我们几方都被抓了,而且事情确实涉及的经济数额几千亿,涉及的总体经济数额都快要上万亿了,涉及了国有资产涉及了数以万计的人,几十万计的人,员工达到一百多万人,那么这样的事情是要经历一个调查过程的。之前我说什么呢?我不应该说,我没有能力说,也不具备那个条件。我觉得应该等调查到了一定的段落以后证明到底是他们是错的,还是我是错的,他是好人我是好人,他有什么罪我有什么罪。
+视频用陕西方言讲述了西安疫情爆发的前前后后。郭文贵先生爆料，冠状病毒是阻止香港人上街参加反送中运动的。疫苗是共产党的生化武器。陕西书记给陕西人打的疫苗浓度是最高的，打两针相当于河南人打十针。只有灭掉中国共产党，才能解救身处疫苗灾难中的同胞。
 
-随着李友案的宣判,这个事情已经证明了我们当初检举揭发的97%都是对的，而且李友的宣判证明了我们现在的检举揭发保护了国有资产，保护了小股民利益。更重要的事情是我们揭发了很多贪官而且都已经被判刑,被抓起来了。**可是这件事情只是刚刚开始！**
+视频链接：[郭先生盖特](https://app.gettr.com/post/pmi87dd11f)
 
-*发布：玉米地守望者*
-
-**更多资讯，请关注：
+*发布：Mttfly*
+**
+更多资讯，请关注：
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
