--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,42 +1,25 @@
 ---
-title: 去年澳洲通胀率激增3.5%或导致提前加息
+title: “专制主义的大流行”拜登强推疫苗强制执行
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1907360/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907371/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+翻译：Annabelle
+校对：精灵蓝
+剪辑|字幕：小强
+编辑：Mttfly
 
-整理：Sara9
-编辑：小红帽
+在接受福克斯新闻采访时，第一自由研究所特别顾问杰里米·戴斯认为，在疫苗强制令上，拜登总统完全超出了宪法授予他的权限范围。冠状病毒大流行现在彻底变成了“独裁大流行”。疫苗强制令侵犯了州政府的权力，也践踏了第一修正案。宗教组织也不得不违背他们的信仰，强迫员工接种疫苗。如果总统可以像皇帝般继续强制接种，那宪法还有什么意义？他呼吁，所有人都有权利选择是否接种疫苗，而不是因此被炒鱿鱼、罚款。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/f7f3817f4c8144fe-1.png)图片来源：雅典娜设计组
+视频链接：[‘](https://video.foxnews.com/v/6290423929001)[A pandemic of the autocrat’: Biden pushes for vaccine mandates](https://video.foxnews.com/v/6290423929001)
 
+*发布：*tianzhihuan
 
-根据《澳大利亚人》1月25日报道， 2021年澳大利亚的通胀率激增到3.5% ，提前加息可能性大增。
-
-澳大利亚统计局(ABS)的最新数据显示，在截止到9月份的三个月里，通胀率上升了0.8%，其中12月的季度增幅大大超过了预期的1.3%。
-
-本季度最大的通胀驱动因素是新住宅的购买，增长了4.2%，而且汽油价格在该季度上升了6.6%。
-
-在汽油和住房建设成本进一步大幅增加的支持下，截至2021年12月的一年中，通货膨胀率从3%急剧加速到3.5%。
-
-剔除了燃料和食品等波动较大的商品后，基本通胀率从2.1%上升到2.6%。
-
-这三个月的平均消费者物价指数（CPI）增长了1%，远高于经济学家的预测。
-
-核心消费价格增长指标现在完全处于澳大利亚储备银行（RBA）2-3%的目标范围内，消费价格压力的攀升提高了储行提前加息的可能性，澳储行将在下周二举行今年的第一次会议。
-
-澳大利亚储备银行行长Philip Lowe一直认为，明年年底前不会加息。
-
-新闻链接：[2021](https://cn.theaustralian.com.au/2022/01/25/62838/)[年澳通胀率激增](https://cn.theaustralian.com.au/2022/01/25/62838/)[3.5%](https://cn.theaustralian.com.au/2022/01/25/62838/)[提前加息可能性大增](https://cn.theaustralian.com.au/2022/01/25/62838/)
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场](https://twitter.com/HimalayaAthena1)[Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场](https://www.gettr.com/user/himalayaathena)[Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)[Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[GTV](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[直播](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[1](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
