--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,149 +1,166 @@
 ---
-title: 喜币最牛的是系统，最稳定、合法、永远不会被提现提垮
+title: 喜币和新中国联邦合璧，犹如黑暗中的明灯，令习近平和达沃斯感到恐惧！
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1907711/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1907844/)
 
-[https://gtv.org/video/id=61edd98287664c47acd906f6](https://gtv.org/video/id=61edd98287664c47acd906f6)
+[https://gtv.org/video/id=61eddb3987664c47acd90792](https://gtv.org/video/id=61eddb3987664c47acd90792)
 
 **郭文贵
 Miles Guo**
 
-喜币最值钱的地方在哪里
-Where are the most valuable things of HCoin?
+你们拥有世界上最牛叉的数字货币，喜币
+You have owned the most powerful digital currency in the world, Himalaya Coin
 
-你看昨天、前天、大前天
-You can see that yesterday, the day before yesterday, and so on
+是唯一在人类上未来全球可以流通的
+It is the only one that can be circulated globally in the future
 
-它是1年365天，7天24小时在线
-It’s online 24/7 and 365 days a year long
+是全世界政府法律遵守的
+It also complies with the government laws around the world
 
-全世界汇丰银行、美国银行、UBS银行
-HSBC, Bank of America, UBS Bank, all banks in the world
+啥叫数字货币
+What is a digital currency?
 
-任何一家银行你去提现挤兑，百分之百都破产
-if you go to any bank to withdraw and run on them, 100% of them will face bankruptcy
+就是不受政府敲诈的
+It is a new kind of money that is free from extortion by the government
 
-没有一家不破产的
-and none of them can get away with it
+自由流通的、保密的
+freely circulated, confidential
 
-只有喜联储
-Only the Himalaya Exchange
+谁也拿不走的新的钱
+and cannot be taken away by anyone
 
-你把你所有的HDO提走，它百分之百不会破产
-when you withdraw all of your HDO, 100% will not face bankruptcy
+比黄金、比你的纸币还重要
+more important than gold and your paper money
 
-什么事都没有
-nothing will happen
+那么这个权力 共产党给拿走了
+Then what is the right being taken away by the Communist Party?
 
-美国的美联储竟然要接受
-The U.S. Federal Reserve actually wants to accept it
+叫数字人民币
+It is called digitalization of RMB
 
-说可以跟私人的稳定币就是喜美元HDO可以合作
-saying that they can cooperate with a private stable currency, which is the H-dollar HDO
+数字化叫绝对中心化
+The digitalization of RMB is absolutely centralized
 
-你知道这是多大的变化？兄弟姐妹们
-Brothers and sisters, do you know how big a change this is?
+没有政府的币
+Digital currency is not supposed to be controlled by government
 
-是天地之间的（转变）
-It’s the transition between earth and heaven
+它要绝对政府化
+But it (digitalization of RMB) has to be absolutely controlled by government
 
-它（美联储）不敢说消除所有的数字货币了
-It (the Federal Reserve) does not dare to say that it will eliminate all digital currencies
+那你不就找死吗
+It is ridiculous
 
-它自己都在研究美元要数字货币化
-The Fed itself is studying the digital monetization of the US dollar
+那么我们给了你喜币
+Then we give you Himalaya Coin
 
-还要跟私人稳定币就是咱喜美元要联合
-and it will combine with the private stable currency, which is our HDO
+全人类都要
+All mankind want to buy
 
-喜币牛就牛在不是你英国的交易所
-The awesomeness of our HCoin is that it’s not the UK exchange
+不光是中国人民要买
+Not only Chinese want to buy
 
-人家是第三方国家澳大利亚交易所
-It’s is a third-party country Australian Exchange
+全人类都要买 一定会的
+All human beings will definitely want to buy it
 
-还有其他国家交易所
-and there are other national exchanges
+还要全球的流通
+Also it will be circulated globally
 
-不但如此
-Not only this
+你知道这次达沃斯论坛说什么吗
+Do you know what this Davos forum is talking about?
 
-你看看接下来大家我跟你说的
-You’ll see the next what I have told you
+我告诉大家
+Let me tell you
 
-喜币未来机构投资者公告的时候
-When announcing the institutional investors of HCoin in the future
+我今天可以说达沃斯论坛私下讨论最多其中之一
+Today I can say that, one of the most discussed topics in private at Davos forum is
 
-如果你们要不害怕、不震惊、不从椅子上掉下来
-if you are not scared, not shocked, and not falling off from your chair
+包括新中国联邦是否会被很多国家突然给接受
+including whether the New Federal State of China will be suddenly acknowledged by many countries
 
-如果是东弟颖妹妹不流水流的像汪洋大海一样
-if Hao Haidong brother and Ye Zhaoying sister do not enjoy what they are doing
+成为代表中国人民的政府
+to become a government representing the Chinese people
 
-咱这事就算七哥放狗屁
-this matter will be considered Brother 7 (Miles Guo) is bullshit
+和喜币是否会在全世界全面流通
+and Himalaya Coin will be fully circulated around the world
 
-这个巨大的变化，你看看这个稳定币还有这个系统
-This huge change, take a look at this stable currency and it system
+他(们)说 如果喜币流通
+They said, if Himalaya Coin is circulated
 
-我今天可以告诉大家还有20%（黄金）在这块搁着
-I can tell you today that there is also 20% (gold) sitting with it
+我们就控制不住了
+We will not be able to control it
 
-人类上没有第二家
-and you cannot find another one among mankind
+这将成为所谓的
+This will become so-called
 
-而且是多个法律管辖区约束
-And (HDO) is bound by multiple legal jurisdictions
+他们叫未来100年金融计划
+They call it the next 100 years financial plan
 
-而且我可以（说）最根本的这个稳定币你随时可以拿钱的
-and I can say the most fundamental of this stable currency is that you can take money at any time
+就是把数字货币化的权力操控在达沃斯手里
+It is to put the power of digital monetization in the hands of Davos
 
-你可以清零的
-and you can clear it
+现在 习近平害怕
+Now Xi Jinping is afraid
 
-这是为什么现在几十个国家现在跟这个喜联储在谈这个执照的时候
-That’s why dozens of countries are now talking to the Himalaya Exchange about (their trading) license
+你以为光习近平害怕
+Do you think that only Xi Jinping is afraid?
 
-说你们到现在展现的是任何数字货币没有的系统
-saying that what you’ve shown so far is a system that no digital currency has
+你以为光这些达沃斯党 全地球上这几百个富豪害怕
+Do you think that only these Davos Party members and the hundreds of rich people on the earth are afraid?
 
-记住啊这个系统设计是七哥的创意
-Remember, this system design is the creativity of Brother 7 (Miles Guo)
+恋童癖害怕
+and the paedophiles are afraid?
 
-是最牛的
-It’s the best
+我告诉大家
+Let me tell you
 
-第二，是这个系统的合法性（是）最牛的
-Secondly, the legitimacy of this system is the best
+喜币就像在黑暗中的一盏明灯
+Himalaya Coin is like a beacon in the dark
 
-第三，它法律的设置在全球性它的法律安全性是最牛的
-Thirdly, its global setting and its legitimate security are the best
+一灯能除千年暗
+A Light Removes a Thousand Years of Darkness
 
-还有一个
-There is one more
+一个黑暗（中的灯）能把千年的黑暗给去掉
+A light in the dark can remove the darkness of a thousand years
 
-它的稳定的整个储备系统是最牛的
-its stable entire reserve system is the best
+咱就是那个黑暗中的灯叫喜币
+We are the light in the dark called Himalaya Coin
 
-还有个绝对限制每年发行只有10亿个
-and there is also an absolute limit of only one billion (HCoin) issued per year
+我们的这个设计
+This is our design
+
+一智能灭万年愚
+One Wisdom Light Destroys Ten Thousand Years of Stupidity
+
+喜马拉雅联邦 你记住
+Himalaya Federal State, you remember
+
+没有联邦喜币就没有那么牛叉
+No Federal State, Himalaya Coin wouldn’t be this great
+
+有喜币没联邦也没那么牛叉
+No Himalaya Coin, the New Federal State of China wouldn’t be this great
+
+New Federal of State 新中国联邦和喜币放在一起
+New Federal State of China and Himalaya Coin together
+
+就是灭掉了万年的愚蠢
+are the light to destroy the ten of thousand years of stupidity
 
 * * *
 
-Date: 01/16/2022
-原视频标题:
-喜币最牛的是系统，最稳定、合法、永远不会被提现提垮
-The best thing about G Coin is its system, which is the most stable, legitimate, and will never go bankrupt with withdrawals
-原视频日期：2022/01/14
-原视频链接: [**https://twitter.com/jeff\_john\_sta/status/1482685155751964674?s=24**](https://twitter.com/jeff_john_sta/status/1482685155751964674?s=24)
-任务编号：KC429（3545）
-视频时间段 : 0:00-02:10
-英听校：洛杉矶盘古农场 – 郭班之樱
-翻译：洛杉矶盘古农场 – 郭班之樱
-翻译终校：洛杉矶盘古农场 -Mike Li
-字幕+视频制作：洛杉矶盘古农场-Jambo
-审片：洛杉矶盘古农场-银龙
-发布 : 洛杉矶盘古农场-恩典
+Date: 01/14/2022
+原视频标题: 《喜币和新中国联邦合璧，犹如黑暗中的明灯，令习近平和达沃斯感到恐惧！
+The combination of Himalaya Coin and the New Federal State of China is like a beacon in the dark, which scares Xi Jinping and the Davos!》
+原视频日期：2022/01/22
+原视频链: **[https://gettr.com/post/ppvrj3e571](https://gettr.com/post/ppvrj3e571)**
+任务编号：KC430（03556）
+视频时间段 : 0:00-2:19
+中听校：洛杉矶盘古农场 – WH
+翻译：洛杉矶盘古农场 – WH
+翻译终校：洛杉矶盘古农场 – Mike Li
+字幕+视频制作：洛杉矶盘古农场 –文新
+审片：洛杉矶盘古农场 –银龙
+发布 ：洛杉矶盘古农场 –恩典
 [![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
 洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
