--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,21 +1,29 @@
 ---
-title: 七哥回忆1120跟班农先生的经历（上）
+title: 文贵视角:&#8217;甜蜜蜜运动&#8217;让中共虚假的中国梦成为恶梦
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907686/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1907801/)
 
-#### 整理：雅典娜速记组
-编辑：开智则立
-![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥回忆1120跟班农先生的经历（上）-scaled.jpg)
-2018年的11月20号，我和班农先生以及咱们很多战友们一起举行的爆料革命有史以来的第一个新闻发布会，在三年之后的今天，当我坐在这里，我和班农先生今天早晨见面，我心情很激动，班农先生属于爱尔兰人， 血比较冷，但是他也是比较热血的人。他昨天一直在跟我说我们是1120, 3年纪念日。班农先生是一个我看过西方人里比较热血的人，我知道他在 说什么，我们当然心都是通的，这种感触，很多战友曾经亲身经历过， 但是你们没法体会，很难理解我们当年，班农先生我们一起走过的路，当我和班农先生谈论海航这件事时，作为一个西方大师级的政治家，班农先生是很难相信这种事情是真的发生了的，几乎是我跟他沟通，每一次， 一次一次打破班农先生对整个中国政府和共产党以及共产党对西方的这种渗透的结果，都让他有了新的认知。直到2018年，大概8月份到9月份的时候，我给他讲述在法国的这个结果之后，然后呢，我说我们将会开一个新闻发布会，发现班农先生的第一句话就是“不可能，绝对不可能。ImpossibIe, brother. You are Crazy.”然后呢？我让他看文件啊，他也感到很吓人。
+撰稿:牛小妹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Image-1-2-11.jpg)
+**新中国联邦不用兵、不流血、无人伤亡，灭中共于万里之外**
 
-*发布：开智则立*
+“当北京冬奥会开始之际，邓丽君’甜蜜蜜’的歌声将响遍整个北京二环以内，这场’甜蜜蜜运动’会有意想不到的精彩。’甜蜜蜜运动’是新中国联邦运用奇门遁甲最高的境界，不用兵，不流血，无人伤亡，远在万里却灭敌于无形之中。共产党会哭喊着’你们到底在哪里?’，却找不到’甜蜜蜜’的歌声从何而出。”郭文贵先生在1月24日的大直播中高兴地说，’甜蜜蜜运动’会让共产党明白新中国联邦的力量无远弗届，这些老杂毛就算不吓死也会失去半条命。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+“甜蜜蜜行动已经启动，会在中共所谓的伟大时刻开始。”在冬奥会期间，郭文贵先生计划在习太阳的梦里整点动静，”在全世界元首聚集北京的时候，全世界社交媒体大唱赞歌的时候，在布满蜘蛛网的屋子里，不断传出’甜蜜蜜’的歌声，人找不着，共产党只剩下恐惧。”
+
+**新中国联邦快乐地、甜蜜地灭掉共产党**
+
+‘甜蜜蜜运动’就像所谓的茉莉花运动一样，会有很多知识分子、老师、律师、军人、音乐家、医生参加。”新中国联邦以此歌曲传颂伟大的母亲，像新中国联邦战友（300年的飞飞）带领全家勇敢地对抗冠状病毒(中共病毒)，挑战邪恶，然后重生，而且美丽。我们要用’甜蜜蜜’的歌声翻转杨改兰的故事。”文贵先生感性地说，”现代版的杨改兰，是一个没被中共病毒打倒的坚毅母亲。我们要在快乐中、健康中、享受中，灭掉共产党，而不是被迫杀掉自己、杀掉孩子，一无所有的杨改兰。”甜蜜蜜运动开始之后，共产党就会知道好日子不再属于它们。
+
+“甜蜜蜜，你笑的甜蜜蜜，好像花儿开在春风里，开在春风里。在哪里，在哪里见过你，你的笑容这样熟悉，我一直想不起。啊…在梦里，梦里梦里见过你，甜蜜笑的多甜蜜，是你，是你，梦见的就是你。在哪里，在哪里见过你。你的笑容这样熟悉，我一直想不起。啊，在梦里….”文贵先生在大直播中哼唱着，”‘甜蜜蜜’伴随着我的童年，也伴随所有的中国人回忆起失去的50代，60代，70代。习近平对这个歌很有感觉，想必也很喜欢’甜蜜蜜’。我们给他上一课，让他好好熟悉熟悉。音乐不是新旧之分，只有力量大小之分。”文贵先生铿锵有力地说。
+
+**‘甜蜜蜜运动’让共产党闻风丧胆**
+
+“甜蜜蜜运动让新中国联邦人左手倒数着共产党灭亡的日子，右手数着喜币往上升的钞票，”文贵先生说，”为何我敢公开说出’甜蜜蜜运动’呢？我们就是要跟老杂毛玩明的。中共已经无法停下冬奥会，新中国联邦的’甜蜜蜜运动’会是在二环里发起的世界级运动，绝不亚于一场文化大革命。到那时，习的中国梦就成为了他的噩梦，他再也不想见到你。”文贵先生保证。
+
+“这场’甜蜜蜜运动’，得到了党内很多有志之士的支持，老同志提到人民英雄纪念碑不要拆，而是把无数杨改兰的故事刻上去，改成’中国母亲碑’。再将毛泽东的水晶棺纪念馆改成纪念香港被杀害的冤魂野鬼、新疆西藏文革的地主冤魂和计划生育之下被杀害的4亿个即将出生的孩子的婴灵。” 数亿个愤怒凄厉的灵魂会随着甜蜜蜜的歌声缠绕着这些老杂毛，讨回属于他们的正义与公道。
+
+邓丽君甜蜜蜜:[https://youtu.be/tHpW1GHlDck](https://youtu.be/tHpW1GHlDck)
 
  
 
