--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,68 +1,34 @@
 ---
-title: 德州刑指控COVID疫苗制造商和推动者犯谋杀和反人类罪
+title: 01/25每日播报｜美航母战斗群进入南中国海以回应中共对台湾的再次骚扰
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1907643/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907724/)
 
-编译: Jenny Ball
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2071.png)图片来源：newstarget.com
+**2022-01-25**
 
-上周向德克萨斯州总检察长肯·帕克斯顿办公室提起的大规模刑事诉讼，指控 COVID-19 疫苗的制造商，以及所有参与推动和分发疫苗的公司和政府官员犯有“谋杀”和“反人类罪”。
+《路透社》台北1月24日报道，美国国防部周一表示，两个美国航母战斗群已经进入南中国海进行训练。这次行动时间恰逢台湾国防部报告中共派遣39架军机大规模入侵台湾西南防空识别区，这是自2021年10月份以来，中共入侵规模最大的一次。
 
-该投诉由哈里斯县居民杰克·博特勒（Jack E. Boteler）提出，他代表“所有利益相关方和订阅的美利坚合众国公民和居民，他们接受了紧急使用授权的研究注射遗传生物材料（mRNA 或腺病毒 DNA）编码武汉刺突蛋白，已知是 SARS-CoV-2 的致病结构，**旨在激发人体产生针对 ****Covid 19 ****的抗体，被称为****“****Covid 19 ****疫苗****”****。**
+报道指出，美国海军舰艇经常在南中国海靠近中共占领的岛屿海域航行，并通过台湾海峡，以此挑战中共的主权要求，令北京方面感到愤怒。
 
-投诉中特别提到的一些人包括：
+美国防部表示，美国海军“卡尔文森号”和“林肯号”两个航母战斗群已经于周日开始在南中国海展开行动。此前，这两个航母战斗群分别在菲律宾海与日本海进行演习。
 
-——美国国家过敏症和传染病研究所所长、乔·拜登总统的首席医疗顾问安东尼·福奇博士（Antony Fauci）；
+美国国防部在一份声明中称，航母战斗群将开展包括反潜作战、对空作战和海上拦截在内的演习，以加强战备。训练将在国际水域按照国际法进行。
 
-——乔治·索罗斯（George Soros），亿万富翁金融家和全球主义反革命分子
+周一，台湾国防部提供的地图显示，又有13架中共军机进入台湾西南防空识别区，其中一架运-8反潜飞机，飞越了巴士海峡，该海峡处于台湾和菲律宾之间，连接着南中国海和太平洋。
 
-— 德博拉·伯克斯(Deborah Birx)博士，川普总统的白宫冠状病毒应对协调员
+台湾国防部补充说，中共两架电子攻击版本的新型歼-16D战斗机参加了此次任务，旨在打击台湾高度依赖的空中防御系统。
 
-——WTO组织总干事谭德塞(Tedros Adhanom Ghebreyesus)
+此前，安全消息人士告诉路透社，中共派遣军机对台湾的骚扰，是对外国军事活动的回应，特别是针对台湾附近的美军，以警告外国军事力量，北京正在监控台海并有能力处理与台湾相关的任何突发事件。
 
-——美国国立卫生研究院前所长弗朗西斯·柯林斯(Francis Collins)博士
+秘翻主编  冰糖葫芦喵编译报道
 
-——CNN创始人、亿万富翁媒体大亨特德·特纳(Ted Turner)
-
-——亿万富翁微软创始人和著名的疫苗推动者比尔·盖茨(Bill Gates)
-
-— 食品和药物管理局卫生(FDA)与公众服务部的主管和负责人；NIH、NIAID 和其他几个美国政府机构；
-
-— 大型制药公司
-
-— 与制造、营销和分发 COVID 疫苗有关的任何其他人。
-
-博特勒的诉状继续说：“本诉状指控基于一系列**事实、观察、专家意见、媒体报道和目击者证词中产生的谋杀和危害人类罪**。”
-
-“这将表明，联合被告和/或严厉地计划和执行了生物战毒素的开发和释放，本文称为“SARS-CoV-2”或“Covid-19”和/或“刺突”蛋白质成分具有双重目标：
-
-1）全球人口减少，
-
-2）通过引起恐慌、经济困难、恐怖、死亡和伤害全球人口来控制人口，从而导致一个世界政府，”它补充道。
-
-博特勒还解释说：
-
-通过使用心理战机制，包括但不限于媒体报道、公共政策、胁迫、欺骗、授权、贿赂、旅行限制、就业限制、言论自由限制和自由限制，本诉状还将表明，被告试图诱导全球人群接受预先计划的实验性基因治疗，通称为“Covid-19 疫苗”，以促进其上述目标。
-
-投诉随后列出了针对福奇、盖茨和其他被列为被告的人的案件，引用了大量数据、几份报告和跨越数十年的事件时间表，并导致投诉称有目的地在中国武汉的实验室制造后并释放 SARS-CoV-2。它还引用了福奇涉嫌资助“获得功能研究”来制造高传染性病毒，表面上是为了研究目的。
-
-它还引用了报道的福奇对当选的川普的警告：“毫无疑问，他执政期间传染病将有挑战……我非常有信心的是，我们将在未来几年看到这一点（大传染病）。”
-
-起诉书的结论是：“此处提供的大量信息，其中大部分是无可争议的事实，提供了足够的可能理由相信，一名或多名指定被告犯下了本刑事起诉书中指称的罪行，特别是通过实施危害人类罪进行的大规模谋杀。”
-
-诉状称，被告“ 针对COVID-19 的创建，有“计划、协调、勾结，并在两个或多个命名和未命名的被告之间合作设计了一个犯罪企业”，并补充说，他们还合谋制造了一种生物武器，该武器最终被释放到了全世界。
-
-**评论：人在做，天在看！“他们还合谋制造了一种生物武器，该武器最终被释放到了全世界”屠杀上百万无辜人民，罪责难逃。**
-
-素材链接：[newstarget.com][Criminal complaint filed in Texas accuses COVID-19 vaccine makers and pushers of “murder” and “crimes against humanity”](https://www.newstarget.com/2022-01-23-criminal-complaint-filed-covid19-vaccine-makers-murder-crimes-against-humanity.html)
+发布 :文橙
 
 * * *
 
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-3.jpeg)
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
