--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 打榜的重要性
+title: 中国吃人还要吃骨头，还坚决不能吐
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912573/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912725/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
