--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人不舍得为自己花钱
+title: 習近平和彭丽媛的属相
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912597/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912788/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
