--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党永远都相信是别人傻，死的都是别人孩子
+title: 习近平非常迷信
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912763/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912780/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
