--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 習近平和彭丽媛的属相
+title: 盘古对彭丽媛的挑战
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912788/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1912808/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
