--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 疫苗政策的推动，才是真正的灾难
+title: 新中国联邦和各国人权或公益机构建立秘密、安全、可信赖的关系
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1913582/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1913613/)
 
 台灣寶島農場
 
