--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党正有计划、有组织对西方民主社会进行猛烈攻击，甚至释放生化病毒
+title: 中共正透过各种政治理由制造另一场人道灾难
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1913550/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1913739/)
 
 台灣寶島農場
 
