--- a/gnews/57.md
+++ b/gnews/57.md
@@ -1,11 +1,11 @@
 ---
-title: 有声&#124;GTV新闻访谈简报&#124;2022年1月22日早
+title: 有声&#124;香草山翻译部周刊&#124;2022年1月23日第32期
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1911615/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1911616/)
 
 配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV_-_Google_-21.png)
-文字版原文：[GTV新闻访谈简报|2022年1月22日早](https://gnews.org/zh-hans/1895022/)
+![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)![](https://assets.gnews.org/wp-content/uploads/2022/01/CN-1-1.png)
+文字版原文：[香草山翻译部周刊|2022年1月23日第32期](https://gnews.org/zh-hans/1899201/)
 
 音频处理：呼吸的雾霾（文小呼吸）
 发稿：呼吸的雾霾（文小呼吸）
