--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,9 +1,9 @@
 ---
-title: 新中国联邦不企图在灭共的正义运动中获得任何利益
+title: 1/26/2022 文贵盖特：40国使馆拒绝中共搞病毒检测和隔离，20多个使馆说要撤且有去无回
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1915808/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1915835/)
 
-台灣寶島農場
+秘密翻译组-北美组
 
  
 
