--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 文·贵天成 – “爆料革命”盘古开天地（十三）
+title: 文·贵天成 – “爆料革命”盘古开天地（十四）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1917509/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1917571/)
 
 #### 整理：澳雅大直播工作组视频剪辑小队
 
