--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,37 +1,35 @@
 ---
-title: 拟议的南卡州法律将使要求疫苗状态为非法
+title: 如果继续接种就有可能发展出更致命病毒
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1917580/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1917747/)
 
-翻译：Jenny Ball
+翻译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2237.png)图片来源：theepochtimes.com
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2243.png)图片来源：thegatewaypundit.com
 
-南卡罗来纳州一项新提议的法律将规定，机构向人们询问其 COVID-19 疫苗接种状态是非法的。
+周一，罗伯特·马龙（Robert Malone）博士在参议员罗恩·约翰逊 (Ron Johnson) 主持的小组讨论中，与其他几位世界知名医生和医学专家一起发表了讲话。
 
-“政府无权让你接种疫苗，无权因不接种威胁你的生计，”该法案的共同发起人州众议员威廉·查姆利 (William Chumley) 说。
+根据参议员约翰逊网站上的描述，近五个小时名为“Covid-19：第二意见”的活动，讨论了广泛的问题，包括“全球大流行应对、早期和医院治疗的知识现状、疫苗效力和安全，什么是对的，什么是错的，现在应该做什么，以及需要长期解决什么问题”。
 
-根据该法案的文本，公共、私人或非营利实体的代表，如询问他人的 COVID-19 疫苗接种状况，应被处以 14,000 美元以上的罚款，或不超过一年的监禁，或两者兼施。
+在活动期间，马龙博士是实验性 Covid 疫苗中使用的 mRNA 技术受人尊敬的发明者之一，他强调，全球范围内的运动，实际上是在全球范围内，为每个人在阳光下接种疫苗，并让他们永久注射加强剂，这严重损害了摆脱这种虚假流行病的前景——尤其是随着高度传染性但明显温和的 Omicron 变体的出现。
 
-“南卡罗来纳州没想参与这场斗争，”查姆利告诉当地媒体，“但它是由联邦政府带给我们的。”
+根据马龙博士的说法，如果公共卫生制度继续推行这种可怕的普遍疫苗接种政策，它将继续推动病毒变异，可能会达到“更具致病性，更能逃避免疫反应”的境地。
 
-该法案目前正在州众议院委员会进行讨论。
+“正如我在圣诞节前所说的那样，Omicron 致使严重疾病和死亡的风险如此之低， 然而，它有一个警告信号——这是比利时病毒专家格特·范登·博什（Geert Vanden Bossche）博士一直在警告的，也是 FDA 在允许紧急使用授权的原始文件中承认的——他们告诉制药行业， 他们希望制药业调查**抗体依赖性增强或疫苗增强疾病的风险**。
 
-支持该法案的立法者表示，他们支持该措施，**因为它可以作为抵御政府胁迫的堡垒**。
+如果我们在大流行面前继续追求这种普遍的疫苗接种策略，尤其是现在的 Omicron——一种更具传染性、高度复制能力的病毒——我们面临的风险是推动病毒通过基本进化达到更具致病性的状态，它们更能逃避免疫反应……在某些情况下，我不想吓到大家，我们已经受够了恐惧色情片。”
 
-“这是为了保护人们免于为了就业、入学或政府服务的目的而被迫或被胁迫接种疫苗，”州众议员、共和党人韦恩·朗（Wayne Long）告诉第 2 频道新闻。
+马龙继续指出，目前普遍接种疫苗背后使用的“科学”，**实际上直接违背了所有已知的****“****基本病毒进化****”**，而这个可怕计划的影响已经开始产生潜在的灾难性结果。
 
-“我每周都会接到人们的电话，**请求立法机关采取某种行动来保护人们的权利，保护他们的隐私，并防止他们被迫，或被胁迫，接种他们坦率地说不想接种的疫苗**，”朗补充道。 “即使对于接种了疫苗的人，我也与他们中的许多人谈过，这确实是一个隐私问题。”
+马龙博士说，Omicron 不仅对实验性疫苗具有抗药性，而且新毒株的“传染性”“似乎也受到疫苗的促进”。
 
-南卡罗来纳州劳动法律师杰里米·萨默林（Jeremy Summerlin）告诉当地媒体，他认为该法案将很难实施。
+他总结道，“为了世界，这种[普遍疫苗接种]必须停止。”
 
-“你把雇主置于一个不可能的境地，”萨默林说。“你现在有一项（拟议的）州法律规定，如果你提出这个问题，并试图遵守联邦法律，那么你就会入狱，”他补充道。
+“但如果我们继续追求普遍的疫苗接种，很可能我们将继续看到更多的逃逸突变体的进化，这些突变体的传染性越来越强，而且很可能变得更具致病性。
 
-“如果你问你的同事他们的疫苗接种情况，而你们只是聊个天而已呢？”他说。“假如你是一名护士，你问另一个护士同事怎么办？你想让当地执法部门因为这条法律而来逮捕他们吗？”
+这种强制普遍接种疫苗的政策与我们对基本病毒进化的所有理解完全相反。我们清楚地看到对疫苗有抗药性的逃逸突变体的发展。 **Omicron ****不仅对疫苗有抗药性，而且疫苗似乎促进了它的传染性**——在我看来，为了世界，这必须停止。”
 
-两周前，最高法院以 6 票对 3 票的多数票否决了一项职业安全与健康管理局 (OSHA) 紧急临时标准，该标准要求拥有 100 名或更多工人的公司的员工要么接种疫苗，要么提交每周测试。周二，OSHA 发布公告称将在周三正式撤销该规定。
-
-素材链接：[theepochtimes.com] [Proposed State Law Would Make It Illegal to Request a Person’s Vaccine Status](https://www.theepochtimes.com/proposed-state-law-would-make-it-illegal-to-request-a-persons-vaccine-status_4235736.html?utm_source=Morningbrief&amp;utm_campaign=mb-2022-01-26&amp;utm_medium=email&amp;est=Cyoa1cWAVoL4Ots9JVAeja2%2F6Bs9ycDyDmrfL7fyXKroPp480xH6HGp7jAcGI5WEymSNQA%3D%3D)
+素材链接：[thegatewaypundit.com][“Omicron Transmission is Likely Facilitated by The Vaccines”: Dr. Malone Warns That If We Keep Vaccinating, We Risk Developing a More “Pathogenic Virus” – (VIDEO)](https://www.thegatewaypundit.com/2022/01/omicron-transmission-likely-facilitated-vaccines-dr-malone-warns-keep-vaccinating-risk-developing-pathogenic-virus-video/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailyam&amp;utm_content=daily)
 
 * * *
 
