--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,21 +1,33 @@
 ---
-title: 日本近期在亚洲的军事布局及对中共的影响
+title: 美媒报道：中共国在非洲推行中草药疗法
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1917508/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1917679/)
 
-撰稿：两万五，爆大料
-![](https://assets.gnews.org/wp-content/uploads/2022/01/日本.png)
-（图片来自网络）
+撰稿：喜妈
+![](https://assets.gnews.org/wp-content/uploads/2022/01/喜妈-3.png)
+来自网络截图
 
-2022年1月6号，日本首相岸田文雄和澳大利亚总雷莫里森签署了有关日本自卫队和澳大利亚军队联合训练和应对灾害的互惠协定，这份协议简化两国军队进入对方国家领土的行政程序是日澳同盟的实质性标志，也是继澳大利亚与美国，英国两国结成“奥库斯”军事协议以后又一个具有里程碑似的防务协定。那么日本在亚洲近期还有哪些军事布局呢，同时表达了怎样灭共趋势呢？本文来进行分析。
+《美国之音》最新报道，中共国在非洲推行中药和中医治疗。报道引用中共媒体称“传统的中草药疗法在非洲变得越来越流行”。报道指出，根据中共喉舌2020 年 2 月《中国日报》的文章，“赞扬”中医，并称中医“将增加中共国经济，改善世界健康，并增强中共国的软实力”。
 
-互惠准入协定其实早在安倍执政期间就已经提出来，现在岸田文雄正式签字，说明他传承了[安倍晋](https://www.baidu.com/link?url=yVHXY4wa_u8Kbb2apGcrxbK2syeSzGZNsGnKyHe3c9QAKTZy_Eei7nQR1WNDqkleyQVLWtUVhoESUdwU3rLNBwfBXtsms4AfGz_yZ0fgCE1QavdU81fi0rJcaFp0mOxz&amp;wd=&amp;eqid=c2dd04d90000cd4d0000000461f137d8)三党派的反华思路。这一次的日澳互惠准入协定虽然表面上看没有美国什么事，但是他们强化的却是以美国为主导的四方机制，这实际上是美国印太战略的一个重要趋势就是模块化，因为四个大国的合作，考虑的问题其实是非常多的，而从四边变成三边。双边合作起来难度就小了，所以美国一直在积极推动美日印美，日澳，日印澳，包括美日韩等三边形式的合作与沟通，而对于日本来说，则是作为美国在印太战略中的先前部队，用于压制中共国。
+可是美国媒体文章继续引用来自非洲肯尼亚国家公共卫生研究所负责人的观点，“患者忽略了可能的伤害”；他认为，“一些草药疗法可能会引起问题，尤其是如果使用过于频繁或用量过高”。此外，文章进一步引用非洲医疗行业专业人士的观点，证实中共的确在推行中医，可是他们“担心草药没有得到足够的监管”。
 
-其次，日本已经和美国，英国，澳大利亚，德国等9个国家签署了情报保护协定。和美国，澳大利亚，印度，菲律宾，英国，印尼，越南等国缔结了防卫装备技术转移协定。在和澳大利亚、英国等军事合作外。日本还与印度加强合作。印度与中共接壤，中印边界近期发生数次边境冲突，试想，如果在台海战争爆发，日本介入后，如果印日同盟的形成，这就会对中共造成双线打击，这样就会加速战争的结束。
+文章引用在非洲行医的中方医生的观点，“一些患者正在从草药 COVID-19 治疗中得到改善”；可是，“几乎没有科学证据表明这些可以帮助对抗这种疾病”。同时，环保主义者“担心传统中药的发展将意味着更多的猎人将追捕濒临灭绝的动物”；因为“像犀牛和某些种类的蛇这样的动物被用来做一些传统的治疗方法”。
 
-根据七哥的爆料，日本可能是灭共以后亚太地区的第一代理人。因此日本跟美国战略捆绑，通过成为美国在印台战略中的急先锋，日本可以体现出更多的牵制中共方面的战略价值来获得西方更多的支持，包括军事支持，也包括外资的流入，这样印度也能在于日本同盟中，获得中共制造业的大量转移，获得有崛起的机会。
+报道引用来自肯尼亚国家的信息显示，该国“每年在医疗保健方面的支出估计为 27 亿美元”。文章引用肯尼亚经济学家的观点，“如果证明（中医）有效，草药可以降低非洲的医疗成本”。该观点指出，如果草药“能够提供更自然、更具成本效益的医疗保健”，非洲人“将受益匪浅”。报道指出，来自中共国的草药专家希望“未来会有更多的国家批准中草药”。
 
-因此，日本近几年在美国的印太地区联盟体系中扮演重要的角色。只要中共打台湾，以美国为首的国家，联合日本、澳大利亚、印度一定能在短时间内结束战斗，消灭共匪！
+综上所述，笔者认为，在目前世界的中共病毒疫情没有减弱反而更加广泛和普遍的现实下，中共国没有分享真相，反而误导国际视野，将中共国的中药和中医治疗推向市场，不仅伤害中国传统的医疗手法，导致谬误流传，而且会让中医的相关疗法因为对于中共病毒的无效而被人诟病。
+
+同时，笔者觉得很蹊跷的是，为什么中共要在这个时间节点上不断推进中医在非洲的发展和认可？如果中共国想要获得非洲国家的支持，就直接分享各种中共病毒的特效药，比如青蒿素和伊维菌素等就好了。甚至，中共只需要提供羟氯喹给非洲国家就可以达到中共病毒预防目的，拉拢人心了。何必要费周折，推销那些不对症的药给非洲国家和人民呢？
+
+笔者认为，这里有可能就是中共有至少两个动机，一是为了继续保有自己在非洲国家中的影响力。因此就用中医可以帮助抗疫的旗号，增强自己的威信，加强对这些国家的拉拢。二是为了赚取这些国家的钱，补足自己的亏空。中共国的经济已经无法靠自我的循环来继续，西方国家也逐渐开启脱钩模式，只有非洲国家在中共的渗透和收买下，还有一点市场。因此，中共就会继续用一些花招来掩盖自己的真实用意，能够赚取一点是一点。
+
+事实上，中共国在自己的统治下，经过各种代言人来推行中草药对中共病毒的疗法都无法得到应有的效果，早就被人民看穿，不再跟风。这个在中共国都没有卖点的方案，中共又把它出口到非洲国家。相信，假以时日，非洲人民通过现实验证，发现根本没有任何实际抗疫作用，还是会放弃的。中共不仅欺骗自己的国民，还以谎言欺骗其他国家的人民。这根本就不长久，也无法进行下去。中共的邪恶也可见一斑。
+
+参考消息：
+
+China Exports Its Traditional Medicine to Africa
+
+[https://learningenglish.voanews.com/a/china-exports-its-traditional-medicine-to-africa/6411759.html](https://learningenglish.voanews.com/a/china-exports-its-traditional-medicine-to-africa/6411759.html)
 
 发稿：MG4
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1-2.jpg)
