--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,33 +1,25 @@
 ---
-title: 从日本、美国和澳大利亚三国关系来谈台湾问题（上）
+title: 美光科技解散上海研发中心DRAM设计部门
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917445/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1917570/)
 
-#### 整理：雅典娜速记组
-编辑：于white
-![](https://assets.gnews.org/wp-content/uploads/2022/01/从日本美国和澳大利亚三国关系来谈台湾问题（上）.jpg)
-美国和澳大利亚之间的关系，大家一定要记住这三国跟欧洲和美国之间是完全不同的关系。
+**撰稿：日本东京方舟农场  海星**
 
-那么在这个关系对中共的态度上，在台湾的问题上，大家不要一样的看。就像中共和俄罗斯和美国关系一样, 中俄永远不可能所谓的永远的好。最后一定是中国人做为牺牲品。
+1月25日，半导体巨头美光科技员工证实，该公司正在解散上海研发中心的DRAM设计部门。
 
-历史以来杀中国人最多的是俄罗斯人。日本是亚洲的过去的第一强国， 也是经济上第二强国。军事上严格来说是第二，但是绝对不输中共。
+据《集微网》报导，多位美光科技公司员工向该报记者证实，美光正在解散上海研发中心的DRAM设计部门，涉及人数超过100人。该公司计划于今年年内完成解散工作，并将选择部分核心员工及其家属技术移民至美国。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片-1-28.png)（图片来源：网络）
+报导指出，一位前美光员工透露，美光的DRAM设计团队此前有一大波人员流失至中共国内的本土IC设计公司和存储大厂。因此，有行业内高管表示，美光此举很有可能是为了防止其先进的DRAM（动态随机存取存储器）技术外泄。
 
-台湾问题关系到日本经济和日本的战略安全。美国人总戳的是日本， 澳洲和印度，印度这个莫迪他说这咱不掺和这事儿。
+此前，美光科技因台湾联电与中共福建晋华合谋窃取其芯片关键技术而向美国法院起诉了这两家公司。随后，美国司法部发现该案不仅仅只是窃取知识产权案，还牵涉到美国国家安全，因而也对这两家公司提起了诉讼。
 
-美国人几乎跟中国人没有什么利益冲突。美国是为了让自己当老大，我要喊两嗓子， 美国人是想对日本说，亚洲军事冲突，你上你先打。
+参考链接：
+1.[https://laoyaoba.com/n/805514](https://laoyaoba.com/n/805514)
+2.[https://www.eet-china.com/mp/a107410.html](https://www.eet-china.com/mp/a107410.html)
 
-发布：于white
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+素材采编：海星
+编辑：青城道姑
+发布：文曦
 
  
 
