--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,72 +1,28 @@
 ---
-title: CDC研究错误得出COVID疫苗对孕妇安全的结论
+title: 澳媒报道：中共国严格的抗疫措施会加剧全球供应链问题
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1917635/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1917783/)
 
-编译： Jenny Ball
+撰稿：喜妈
+![](https://assets.gnews.org/wp-content/uploads/2022/01/喜妈2-1.png)
+来自网络截图
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2239.png)图片来源：childrenshealthdefense.org
+澳洲媒体最新报道引用来自国际货币基金组织的经济报告称：“中共国和美国的增长滞后可能会给全球经济带来压力”。文章引用该报告内容认为，“经济潜力的下降在很大程度上是由于立法机构未能通过一揽子新的社会服务和气候保护措施”。同时，报道指出，中共国的经济下行主要来自“该国房地产行业”，这是中共国“挥之不去的问题”。 此外，中共国对于“冠状病毒封锁”政策和“消费者缺乏兴趣”也是原因。
 
-本月早些时候，CDC建议怀孕的、最近怀孕的、现在正准备怀孕或将来可能怀孕的妇女接种 COVID-19 疫苗。
+报道引用报告承认，“新的经济预测具有高度不确定性”。同时，报道引用相关机构发言人称，世界中共病毒疫情会因为“更危险的变种”而带来危机的“延长”。报告认为，中共国“使用严格的地方封锁来防止病毒传播的战略可能会加剧全球供应链的问题”。文章指出，“航运瓶颈和需求增加共同导致价格上涨”。
 
-CDC在 1 月 7 日的发病率和死亡率周报中得出结论，数据支持怀孕期间 COVID 疫苗接种的安全性，并提出了建议。
+综上所述，笔者认为中共国的经济下行已经是不争的事实，必然的结果。这些专业性的报告充分说明，各个方面都不利于中共国的经济发展。无论是中共国内部环境，还是国际经济状况，在不远的将来，都不乐观也不会改善。相反，各种不确定的因素和中共病毒变种造成的危机，只会令本身就雪上加霜的中共国经济承受复杂的压力而走向全面崩溃。
 
-通过对比怀孕期间接种 COVID 疫苗与怀孕期间未接种疫苗的人，该机构确定， COVID 疫苗与早产或分娩出生时比​​预期更小或发育程度低于预期的孩子（也称为小于胎龄儿（SGA）无关 ）。
+同时，中共国的疫情控制政策实际上是没有达到相应的预期，反而导致国内和国际的相关方面都是更加糟糕。这也是从国际经济报告所反映出来的。中共国的市场已经萎缩，更加处于没有外部世界的吸引力了，还加上对于粗放劳动力市场的简单粗暴冲击，供应链也更加处于危险的状况。
 
-在本文中，我们检查了 CDC 研究中的缺陷，这些缺陷导致该机构错误地得出 COVID 疫苗用于孕妇的结论。
+我们深知中共国目前能够为外部环境所观察到的，实际上都应该会比表面现象上反映出来的更加危急和悲观。反过来，中共国的抗疫措施实际上没有任何实际的效果，也对经济没有切实的促进和帮助。更为恶劣的是，中共国从疫情控制上和经济发展上都没有做到一个政府应该做到的事情，反而是极大地伤害到民生和百姓的各方面生活。从爆料革命所掌握的真相，中共政权必将面临更大的经济衰退和民生问题。
 
-首先，一些背景。
+参考消息：
 
-将孕妇纳入临床试验
+[US, China slowdown to weigh on growth: IMF](https://www.canberratimes.com.au/story/7595085/us-china-slowdown-to-weigh-on-growth-imf/)
 
-**怀孕不仅对准妈妈，而且对发育中的胎儿来说都是一个不稳定的时**期。建议准妈妈不要喝酒精或含咖啡因的饮料，也不要吃寿司和熟肉等生食。
-
-怀孕期间禁用许多药物，包括简单的止痛药，如非甾体抗炎药（布洛芬）、止泻药、减充血剂、抗组胺药、鼻腔喷雾剂和祛痰药。
-
-建议妇女在怀孕期间不要服用这些药物，因为它们对发育中的胎儿构成潜在风险。
-
-几十年来，准妈妈一直被认为是一个弱势群体，为了胎儿的健康，他们需要避免研究的潜在危害。
-
-1977 年，美国FDA发布了将孕妇和“有生育能力”的女性排除在 I 期和 II 期临床试验之外的指南，在这些试验中，**对新药的安全性和有效性测试。**
-
-这种观点部分源于两种现在臭名昭著的药物造成的悲剧，这些药物在 20 世纪中叶被广泛用于孕妇：沙利度胺，它导致世界各地成千上万的儿童出生时具有鳍状肢和其他类似的四肢。先天缺陷和己烯雌酚，这与母亲和她们所生女儿的癌症发病率较高有关。
-
-然而，这种观点在 1993 年发生了变化，通过了旨在增加临床试验中性别和种族多样性的NIH振兴法案。
-
-联邦法规目前要求任何涉及孕妇的研究，必须满足 10 项标准，其中包括“在科学上适当的情况下”，首先收集怀孕动物和非怀孕人类受试者的数据以评估风险，以及对母亲或胎儿的任何风险是“**实现研究目标的最低限度**。”
-
-动物模型的生殖毒性研究在早期就暗示了危险
-
-虽然开发 COVID-19 疫苗的公司已经在动物身上进行了初步研究，但他们的研究仅限于啮齿动物。疫苗制造商没有对非人类灵长类动物进行研究，这些动物被认为是在遗传学、生理学和行为方面与人类最接近的动物模型。
-
-尽管如此，莫德纳自己于 2021 年 3 月 11 日向欧洲药品管理局人用医药产品委员会提交的评估报告，包括一项对妊娠期雌性大鼠生殖和发育毒理学的研究。
-
-报告指出（第 50 页：生殖毒性）**具有一个或多个肋骨结节，和一个或多个波浪形肋骨的常见骨骼变异的胎儿数量增加**。此外，接种疫苗的大鼠所生的幼崽数量低于未接种疫苗的大鼠的数量。
-
-最重要的是，作者明确指出，“在这项研究中，在早期器官形成过程中[主体器官形成的动物胚胎发育时期]没有接种疫苗，以解决疫苗制剂成分的直接胚胎毒性作用。”
-
-一个月前，辉瑞在其 2021 年 2 月 19 日向同一委员会提交的评估报告中报告称，与对照组相比，怀孕大鼠的植入前损失增加了 2 倍以上。
-
-辉瑞报告的作者进一步指出（第 50 页：生殖毒性），“腹裂、嘴/颌畸形、右侧主动脉弓和颈椎异常的发生率非常低”，在暴露的老鼠窝中发生，并且这些调查结果在历史控制数据范围内。
-
-这一发现提出了一个重要问题：为什么将这些主要先天性异常的发生率与“历史”对照，而不是对照本身进行比较？
-
-直到 2021 年 4 月，CDC 仍然坚持认为，有关 COVID 疫苗对孕妇或哺乳期妇女的安全性的数据有限。该机构建议怀孕或哺乳的妇女在接种疫苗前咨询医生。
-
-但是产科医生是否意识到动物模型中出现的潜在安全信号？
-
-如果CDC当时没有提供任何指导，医生怎么会决定 COVID 疫苗适合他们的怀孕患者？
-
-**评论：福奇在电视上告诉疫苗对孕妇很安全的镜头，此刻仍在眼前晃动，这要多邪恶才能对怀着胎儿的母亲们如此自如的下杀手？**
-
-素材链接：[childrenshealthdefense.org][Flawed CDC Study Wrongly Concludes COVID Vaccines Safe in Pregnancy](https://childrenshealthdefense.org/defender/cdc-study-wrongly-concludes-covid-vaccines-safe-pregnancy/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=26cf2504-60c3-4d8d-826f-e930553c5dbc)
-
-* * *
-
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-4.jpeg)
+发稿：MG4
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1-2.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
