--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 大龄战友的奋斗（二）
+title: 我们在修行中找到自己
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917597/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917748/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
