--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,18 +1,23 @@
 ---
-title: 文·贵天成 – “爆料革命”盘古开天地（十四）
+title: 历史上的今天 2022.01.27
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1917571/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1917724/)
 
-#### 整理：澳雅大直播工作组视频剪辑小队
+作者：DustInTheWind
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GTV.png)图片来自GTV.org
+2021年1月27日 文贵先生直播中指出 全球联合灭共形势形成；GTV已经创造神话
+2006年1月27日 郑洁、晏紫澳网女双夺冠
+1997年1月27日 美科学家制造出原子激光
+1982年1月27日 瓦尔德海姆获“联合国和平奖”
+1973年1月27日 越美签定关于越南问题的巴黎协定
+1945年1月27日 苏军解放奥斯威辛集中营
+1926年1月27日 电视诞生
+1822年1月27日 文明古国希腊独立
+1756年1月27日 奥地利音乐大师莫扎特诞生
 
-*发布：玉米地守望者*
+* * *
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+*发布：Theodosia*
 
  
 
