--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,52 +1,31 @@
 ---
-title: 沉默而痛苦一代的声音
+title: 解放军正在试图获取南海坠毁的美军 F35战机隐身技术
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1917712/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1917818/)
 
-翻译： Jenny Ball
+作者：东京樱花团｜捆绑CCP一千年
+![](https://lh4.googleusercontent.com/f-YiPuD5ClaaprW1cTuIA2zWhk73RmKbSpNBBTSQpSofnWjmUuoIvGEaAFAk4wxfV2on0yd480OepyDaeHKzHT3uM0JcoyzHyFcRszQdyCFpABFyLF_rR32AfS38QdZFTNN9hY2E)[*图片来源*](https://i.dailymail.co.uk/1s/2022/01/25/22/53333001-10440323-Sailors_taxi_an_F_35C_Lightning_II_assigned_to_the_Argonauts_of_-a-9_1643150435293.jpg)
+**美国授权撤离驻华大使馆后中共国官宣哑口无言，但战狼媒体一片混乱。新华社虽然不敢报道美国驻华大使馆事件，却对美军F35系列战机坠毁在南海颇感兴趣。美军卡尔文森号发言人称，他们担心中共国已经或正在获取美军“绝密隐身技术”。罕见的是，F35战机三个月已经两次坠毁，背后都有中俄身影。**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2241.png)图片来源：newsweek.com
+据中共国新华社27日消息，美国当地时间24日，美国第七舰队证实一架F-35C战机试图降落在航母时发生事故，撞上飞行甲板，并坠入南海。中共国国防部新闻发言人谭克非大校曾表示，美方打着“航行自由”的幌子在南海炫耀武力，成为南海紧张局势的直接推手。这是中共国利用发生的事实掩盖中俄联手偷盗美军F35战机隐身技术的幌子。
 
-在最初的病毒恐慌之后，学校关闭和戴口罩的命令主要是由教师工会推动的，这些工会的行为就像 K-12 集团（1）将儿童作为人质索取赎金一样。
+根据《[每日邮报](https://www.dailymail.co.uk/news/article-10440323/Seven-sailors-board-USS-Carl-Vinson-South-China-Sea-injured-94-million-F-35C-fighter-jet-crashes-trying-land-deck.html)》25日消息称，“这架价值 1 亿美元、专为海军作战定制的 F-35 战机坠海事件已是三个月内第二次在海上损失。”令人惊讶的是，中俄都对F35战斗机隐形技术感兴趣，2021年11月18日，《每日邮报》同样报道了“英国 F-35 隐形战斗机坠入地中海时，美国要求加入搜寻这架飞机的行动，以阻止俄罗斯获取并恢复战机上的秘密技术。”对此《每日邮报》继续跟踪报道称，“皇家海军潜艇正在与俄罗斯人竞争，以从地中海底部回收一架坠毁的价值 1 亿英镑的喷气式飞机，该飞机是由美国设计的且采用了绝密技术，包括绝密雷达和传感器，技术非常敏感，因为它能使 F-35 以超音速在敌方领土“隐身”飞行。但是，[由于间谍活动，中共很可能已经知道有关这架喷气式飞机的所有信息](https://www.dailymail.co.uk/news/article-10214377/Navy-rushes-recover-100m-F-35B-jet-sea-bed-pilot-ditched.html)。”
 
-（注释1: K-12 集团旨在垄断道德语言。例如，在第一轮学校停课期间，芝加哥教师工会在推特上写道：“推动学校重新开放的根源在于性别歧视、种族主义和厌女症。”
+- ***延展阅读：***[***英国在海底找到F-35隐形战机残骸***](https://www.thenationalnews.com/world/uk-news/2021/11/30/british-f-35-stealth-fighter-wreckage-found-on-seabed/)
+- ***延展阅读：***[***美国海军正努力从南中国海回收F-35***](https://www.aljazeera.com/news/2022/1/26/us-navy-works-to-recover-f35-from-south-china-sea)
 
-为了保护自己的权力和影响力，K-12集团采取了左派的招数，通过“公平的镜头”来描绘美国生活中的一切。“**公平****”****是一个再造的特洛伊木马词**，旨在将批判种族理论和其他此类文化激进主义的意识形态走私到学校中。“透镜”会折射光线，让您以不同的方式看到物体。当你只能通过“公平的镜头”来看待这个世界，它将每一个物体都融合成一个所谓的“种族主义”、“性别歧视”和“厌女症”的大阴谋，所见即所得。）
 
-如果您不知道这一点，那么您可能想阅读“主流”企业媒体之外的内容。直到 2021 年 12 月 27 日，一位主要媒体人物简·克劳福德(Jan Crawford )才宣布“我们的 COVID 政策对幼儿和儿童产生的毁灭性影响”是今年最被低估的故事之一。
+《每日邮报》证实了F35隐形舰载战斗机坠毁的不寻常，消息称，周一，美国F-35隐形战斗机在卡尔文森号航空母舰上发生“[着陆事故](https://www.dailymail.co.uk/news/article-10440323/Seven-sailors-board-USS-Carl-Vinson-South-China-Sea-injured-94-million-F-35C-fighter-jet-crashes-trying-land-deck.html)”后，美国面临着一场与中共的竞赛，以回收一架坠入南海的 F-35 隐形战机。担心美国最先进喷气式飞机的秘密技术可能落入敌人手中。”
 
-为什么我们没有直接听到孩子们的声音？**也许是因为他们的声音不符合企业媒体偏爱的党派叙事。**
+从中可见，美军F35舰载战斗机失控，很有可能是解放军牵引技术暗箭伤人所为，虽没有可靠的消息证实，但这已经不是第一次发生此类事故，众所周知，美军战机坠毁事故非常少见，为何屡次在坠毁都有中俄的身影？
 
-但上周，一位名叫艾迪生(Addison)的聪明少年，站在伊利诺伊州内珀维尔的学校董事会前，为自己和她这一代人说话。她没有在“主流”媒体喜欢放大的唤醒宣传新闻讲话中发言。相反，她用机智和神韵发自内心地讲话，表现出讽刺性的感激之情：
+美国第 7 舰队发言人告诉《每日邮报》， “我们无法推测中共国在这件事上的意图是什么。为了避免最先进的战机落入中共国手中，将给海军留下一个复杂的打捞任务。因为F-35C 是唯一一款设计用于在航空母舰上运行的远程隐形攻击战斗机。
 
-“我在这里说谢谢。谢谢你们，学校董事会和布里奇斯警司，因为你们没有利用你们的权力来反对伊利诺伊州的戴口罩规定，我们现在要每天都着戴口罩，不是吗？真棒啊！
+2022年1月27日
 
-谢谢你们强迫我戴口罩，这样我就不用刷牙洗脸了。说真的，我的生活轻松多了。我不戴眼镜，但如果我戴了，我也会感谢你们我的眼睛被我呼吸的雾气遮住我的眼睛。感谢您教导学生，我们自己的心理健康，远不如让接种了三剂疫苗的成年人感到安全重要。
-
-谢谢你们教会我，即使是**最微小的风险也不值得去冒**。当你走上阻力最小的道路，没有失败的机会——而且，绝对连感冒的机会都没有时，生活是最好的。
-
-感谢您们没有联系学生询问**我们对口罩的看法**。因为，如果你们那样做的话，大多数学生会说他们讨厌口罩。然后，你们可能会再次猜测决定让我们戴口罩。
-
-感谢你们让我**体验到那种看不到面部表情产生的焦虑**。
-
-感谢你们教导我们，**我们不应该质疑权威或批判性地思考**，而是应该遵循负责人告诉我们的任何事情。服从是最好的。我现在意识到，我自己思考被高估了，当你只能基于恐惧做出决定时，这并不是真正必要的。
-
-谢谢你们把**你非理性的恐惧和焦虑推给我**，因为我已经没有足够的担心了。我现在意识到，当我只需要担心我的课程、成绩、SAT 和进入大学时，生活是多么容易。
-
-谢谢你们教我，**成为一个道德高尚的人，只需要我每天遮住脸八小时**。道德最优越的人会戴着两层口罩，甚至三个！如您所知，我们周围的州——印第安纳州、威斯康星州、爱荷华州、密歇根州和明尼苏达州（学生人数是伊利诺伊州的 2.5 倍）——不会强迫孩子戴口罩。不过，我和你们在一起！这些状态是失控的。**每天鲁莽地将孩子置于痛苦和死亡的危险之中。**口罩有效！即使各州的结果与伊利诺伊州相同。说到数据，尽管 COVID 在我这个年龄的孩子中具有非常高的存活率，但感谢们对这些数据保持沉默。不过，谁需要数据呢？我们都知道，再也看不到任何人的脸是最安全的。
-
-感谢你们没有挑战这种不合理的恐惧和无效的 COVID 口罩政策。毕竟，在 NIH 用于研究的 420 亿美元中，没有一美元用于研究儿童的心理健康方面。我问你：不要屈服。保持坚强。保持勇敢。保持安静。让我们永远为孩子们戴上口罩。谢谢。”
-
-**为什么我们没有听到更多的学生像艾迪生一样大声疾呼**？
-
-素材链接：[newsweek.com][The Voice of a Silenced and Suffering Generation | Opinion](https://www.newsweek.com/voice-silenced-suffering-generation-opinion-1672493?utm_source=PushnamiMailing&amp;utm_medium=email&amp;utm_campaign=automatic&amp;UTM=1643202091733&amp;subscriberId=6180566715c6fcdd524c7c95)
-
-* * *
-
-*审核：文乐
-校对：小东
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-4.jpeg)
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
