--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,31 +1,17 @@
 ---
-title: 放毒的目的就是为了疫苗
+title: 在英国，65% 的 Omicron 患者再次感染
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917682/)
+`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1917791/)
 
-#### 整理：雅典娜速记组
-编辑：于white
-![](https://assets.gnews.org/wp-content/uploads/2022/01/放毒的目的就是为了疫苗-.jpg)
-那疫苗本身就是毒疫苗，本身就是毒，本 身就是有害的刺突蛋白还有mRNA疫苗是对人类基因改变，包括整个人的蛋白的改 变。就像电脑改程序一样，这是很可怕 的。
+翻译：萧亦
+![](https://assets.gnews.org/wp-content/uploads/2022/01/01272.jpg)图片来自ansa.it
+伦敦帝国理工学院一项名为 React 的大型研究得出的结论：在英格兰，三分之二（65%）最近感染了 Omicron 冠状病毒变种的人在之前已经感染过 Covid。。研究结果涉及今年前两周使用的大约 100,000 条试纸检测。
 
-而且这是他有一个他的标准，叫优胜劣汰, 谁为胜谁为汰，包括其他民族，这是很可怕的，这叫种族大屠杀，带着下一步做测 试，主要是让你打疫苗。你想想，疫苗怎么可能在2020年4、5月份6月份就出来了？你都不知道病毒哪来的。
+伦敦大学的科学家认为还需要做更多的工作来确定有多少人真正被再次感染。但风险最高的人群类别已经出现：他们是卫生工作者和有孩子的家庭。与此同时，目前尚不清楚有多少检测呈阳性的志愿者是已经完全接种了疫苗的。
 
-一定是疫苗灾难大于病毒灾难。
+原文链接：[https://www.ansa.it/sito/notizie/mondo/2022/01/26/oms-variante-omicron-rappresenta-l891-dei-casi-mondiali\_2213f527-1f3e-40a5-896c-4ffaa46843ff.html](https://www.ansa.it/sito/notizie/mondo/2022/01/26/oms-variante-omicron-rappresenta-l891-dei-casi-mondiali_2213f527-1f3e-40a5-896c-4ffaa46843ff.html)
 
-这是当时 咱们在欧洲科学家内部的这个情报人员说, 对人类造成危害的不是病毒，病毒没有任 何了不起的。七哥在2020年2月8号就说了疫苗灾难、疫苗次生灾害，疫苗才是真正的大杀器，这才是目的，所以不存在任何中间的问题啊。放毒的目的是为了疫苗。
-
-发布：于white
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+责任编辑/发布：意大利达芬奇农场   萧亦
 
  
 
