--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 火，生命的源泉
+title: 我们是团队作战，只有团结才能灭共
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917631/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917776/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
