--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,18 +1,17 @@
 ---
-title: 我们在修行中找到自己
+title: 在英国，65% 的 Omicron 患者再次感染
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917748/)
+`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1917791/)
 
-编辑/整理：澳雅大直播工作组视频剪辑小队
+翻译：萧亦
+![](https://assets.gnews.org/wp-content/uploads/2022/01/01272.jpg)图片来自ansa.it
+伦敦帝国理工学院一项名为 React 的大型研究得出的结论：在英格兰，三分之二（65%）最近感染了 Omicron 冠状病毒变种的人在之前已经感染过 Covid。。研究结果涉及今年前两周使用的大约 100,000 条试纸检测。
 
-*发布：*Frank2021
+伦敦大学的科学家认为还需要做更多的工作来确定有多少人真正被再次感染。但风险最高的人群类别已经出现：他们是卫生工作者和有孩子的家庭。与此同时，目前尚不清楚有多少检测呈阳性的志愿者是已经完全接种了疫苗的。
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+原文链接：[https://www.ansa.it/sito/notizie/mondo/2022/01/26/oms-variante-omicron-rappresenta-l891-dei-casi-mondiali\_2213f527-1f3e-40a5-896c-4ffaa46843ff.html](https://www.ansa.it/sito/notizie/mondo/2022/01/26/oms-variante-omicron-rappresenta-l891-dei-casi-mondiali_2213f527-1f3e-40a5-896c-4ffaa46843ff.html)
+
+责任编辑/发布：意大利达芬奇农场   萧亦
 
  
 
