--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,18 +1,23 @@
 ---
-title: 在英国，65% 的 Omicron 患者再次感染
+title: 二次疫苗接种对抗Omicron毒株效果只有52%
 ---
-`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1917791/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1917835/)
 
-翻译：萧亦
-![](https://assets.gnews.org/wp-content/uploads/2022/01/01272.jpg)图片来自ansa.it
-伦敦帝国理工学院一项名为 React 的大型研究得出的结论：在英格兰，三分之二（65%）最近感染了 Omicron 冠状病毒变种的人在之前已经感染过 Covid。。研究结果涉及今年前两周使用的大约 100,000 条试纸检测。
+撰稿：东京樱花团｜立正道
+![](https://lh4.googleusercontent.com/QgF1MXi_8NF3J0DDqz4laCJ7Cldx31b1caMxP6Y22BzPYyc4YkSzAZ13SpwnVjTbopqQ_EwbfoYZlxkJlXjdXf2I3tmZuOIV3dzF-G-_bY489fOCmV3BhVvLIvQr0CBWN1u039Wh)[*图片来源*](https://cdn2.ettoday.net/images/5663/5663707.jpg)
+长崎大学等研究团队26日宣布，对于两次接种中共病毒（新冠病毒）疫苗的人来说，今年1月发病的预防效果暂定值为51.7%，较去年 7-9 月的德尔塔毒株流行期间的 88.7% 大幅下跌，认为与新Omicron毒株的替换和接种后的时间长短有关。
 
-伦敦大学的科学家认为还需要做更多的工作来确定有多少人真正被再次感染。但风险最高的人群类别已经出现：他们是卫生工作者和有孩子的家庭。与此同时，目前尚不清楚有多少检测呈阳性的志愿者是已经完全接种了疫苗的。
+长崎大学森本浩之輔教授说：“虽然在Omicron毒株流行期间也可以期待疫苗一定的效果，但比 Delta 毒株流行期间接种后效果要低。虽然已接种疫苗，但是希望继续采取防止感染措施。”
 
-原文链接：[https://www.ansa.it/sito/notizie/mondo/2022/01/26/oms-variante-omicron-rappresenta-l891-dei-casi-mondiali\_2213f527-1f3e-40a5-896c-4ffaa46843ff.html](https://www.ansa.it/sito/notizie/mondo/2022/01/26/oms-variante-omicron-rappresenta-l891-dei-casi-mondiali_2213f527-1f3e-40a5-896c-4ffaa46843ff.html)
+该调查于今年 1 月 1 日至 21 日进行，当时Omicron株的感染迅速蔓延，针对东京都和爱知县等地区的 5 家医疗机构进行，我们分析了 417 名 16 至 64 岁的疑似感染者，并根据他们的疫苗接种史进行了检测，其中有 116 例阳性，大多数被认为感染了Omicron变异毒株。
 
-责任编辑/发布：意大利达芬奇农场   萧亦
+分析结果显示，与未接种者相比，接种两次辉瑞或者莫德纳疫苗的人预防奥密克戎株效果只有51.7%，研究小组在Delta毒株期间用相同的方法进行了分析，预防效果从88. 7%减少了近37个点。
 
+信息来源：[**オミクロン株  ２回接種効果８８→５２％に  長崎大解析**](https://news.yahoo.co.jp/articles/34b2d01d8b4bbdc3ca3e8dc50cde1fb197579893)
+
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
