--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,17 +1,28 @@
 ---
-title: 2022是人类的分水岭
+title: 共产党破坏传统文化对家庭以及孩子的影响
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917789/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917831/)
 
-编辑/整理：澳雅大直播工作组视频剪辑小队
+#### 整理：雅典娜速记组
+编辑：于white
+![](https://assets.gnews.org/wp-content/uploads/2022/01/共产党破坏传统文化对家庭以及孩子的影响-.jpg)
+中国人的父母啊，对孩子的要求啊，比要求神还高，比对自己要求严格一万倍啊。这属于望子成龙成凤，这自己做不到这事儿，父母很神经，让孩子去做到。这都是不对的，中国父母以爱的名义完全忽视对孩子的生命、安全和快乐。很多父母就孩子打疫苗就说我没办法嘛, 孩子不打不能上学，你就打了，中国父母实际上是很自私的。
 
-*发布：*Frank2021
+七哥在提倡所有中国人永远不会忘了孝敬家庭的观念。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+我也告诉你，中国人的父母关系在前所未有的被共产党改变，就是父母也没有像历史上对孩 子那么负责，孩子也没像历史上一样这么依靠和回报父母，他都是一个新时代的影响，所以能看出中国父母现在由于现代化生活的改变， 对孩子没耐心。没有希望，没有爱，以爱的名 义给孩子不切合理的压力。所以孩子很可怜， 中国孩子很可怜，那么关键他要搞这个打第三针。那是党的共同利益的需求。
+
+发布：于white
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
