--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,28 +1,22 @@
 ---
-title: 澳媒报道：中共国严格的抗疫措施会加剧全球供应链问题
+title: 阿拉斯加及德州起诉国民警卫队疫苗强制令
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1917783/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1917830/)
 
-撰稿：喜妈
-![](https://assets.gnews.org/wp-content/uploads/2022/01/喜妈2-1.png)
-来自网络截图
+撰稿：Gradient Boost
+![](https://assets.gnews.org/wp-content/uploads/2022/01/273.png)图片来自网络
+阿拉斯加州州长迈克·邓利维（Mike Dunleavy）与德克萨斯州州长格雷格·阿博特（Greg Abbott）正在共同寻求阻止美国国防部强制要求国家指挥下的国民警卫队成员接种CCP病毒疫苗。而在上个月，一名联邦法官在对俄克拉荷马州警卫队员的疫苗授权提出质疑的诉讼中作出了不利于俄克拉荷马州的裁决。
 
-澳洲媒体最新报道引用来自国际货币基金组织的经济报告称：“中共国和美国的增长滞后可能会给全球经济带来压力”。文章引用该报告内容认为，“经济潜力的下降在很大程度上是由于立法机构未能通过一揽子新的社会服务和气候保护措施”。同时，报道指出，中共国的经济下行主要来自“该国房地产行业”，这是中共国“挥之不去的问题”。 此外，中共国对于“冠状病毒封锁”政策和“消费者缺乏兴趣”也是原因。
+五角大楼现在要求包括国民警卫队和预备役在内的所有服役人员都必须接种 CCP病毒疫苗。两位州长的律师在周二最新的诉讼中表示，当国民警卫队成员为该州服务时，联邦政府实际并没有指挥的权限，因此CCP病毒疫苗强制令是一种违宪和越界的举动。
 
-报道引用报告承认，“新的经济预测具有高度不确定性”。同时，报道引用相关机构发言人称，世界中共病毒疫情会因为“更危险的变种”而带来危机的“延长”。报告认为，中共国“使用严格的地方封锁来防止病毒传播的战略可能会加剧全球供应链的问题”。文章指出，“航运瓶颈和需求增加共同导致价格上涨”。
+诉讼称，超过 220 名德克萨斯空军国民警卫队成员和约 40% 的德克萨斯陆军国民警卫队成员因为“宗教或其他原因”拒绝接种CCP病毒疫苗。大约 8% 的阿拉斯加空军和陆军国民警卫队成员尚未接种任何 CCP病毒疫苗。在这些成员中，超过 90% 的成员要求“医疗或宗教豁免”，但却没有能够获得。
 
-综上所述，笔者认为中共国的经济下行已经是不争的事实，必然的结果。这些专业性的报告充分说明，各个方面都不利于中共国的经济发展。无论是中共国内部环境，还是国际经济状况，在不远的将来，都不乐观也不会改善。相反，各种不确定的因素和中共病毒变种造成的危机，只会令本身就雪上加霜的中共国经济承受复杂的压力而走向全面崩溃。
+据了解，该诉讼的被告人包括总统乔·拜登、国防部和一些军方官员。
 
-同时，中共国的疫情控制政策实际上是没有达到相应的预期，反而导致国内和国际的相关方面都是更加糟糕。这也是从国际经济报告所反映出来的。中共国的市场已经萎缩，更加处于没有外部世界的吸引力了，还加上对于粗放劳动力市场的简单粗暴冲击，供应链也更加处于危险的状况。
+新闻参考链接：[AP News](https://apnews.com/article/coronavirus-pandemic-health-alaska-greg-abbott-us-department-of-defense-661927345f97c565f5072344f1a4d200)
 
-我们深知中共国目前能够为外部环境所观察到的，实际上都应该会比表面现象上反映出来的更加危急和悲观。反过来，中共国的抗疫措施实际上没有任何实际的效果，也对经济没有切实的促进和帮助。更为恶劣的是，中共国从疫情控制上和经济发展上都没有做到一个政府应该做到的事情，反而是极大地伤害到民生和百姓的各方面生活。从爆料革命所掌握的真相，中共政权必将面临更大的经济衰退和民生问题。
-
-参考消息：
-
-[US, China slowdown to weigh on growth: IMF](https://www.canberratimes.com.au/story/7595085/us-china-slowdown-to-weigh-on-growth-imf/)
-
-发稿：MG4
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1-2.jpg)
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
