--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,22 +1,31 @@
 ---
-title: 芯片危机真能关厂
+title: 解放军正在试图获取南海坠毁的美军 F35战机隐身技术
 ---
-`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1917775/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1917818/)
 
-翻译：萧亦
-![](https://assets.gnews.org/wp-content/uploads/2022/01/01271.jpg)图片来自la repubblica.it
-正处于供应链危机之中的公司发现越来越难以找到原材料和半成品来制造他们的产品。汽车以及电子和医疗设备公司的芯片严重短缺一年多。鉴于没有一些组件，许多公司无法再继续生产。芯片危机真的会关闭工厂吗？如果这种情况的持续存在，再加上通货膨胀问题，那么答案是肯定的。
+作者：东京樱花团｜捆绑CCP一千年
+![](https://lh4.googleusercontent.com/f-YiPuD5ClaaprW1cTuIA2zWhk73RmKbSpNBBTSQpSofnWjmUuoIvGEaAFAk4wxfV2on0yd480OepyDaeHKzHT3uM0JcoyzHyFcRszQdyCFpABFyLF_rR32AfS38QdZFTNN9hY2E)[*图片来源*](https://i.dailymail.co.uk/1s/2022/01/25/22/53333001-10440323-Sailors_taxi_an_F_35C_Lightning_II_assigned_to_the_Argonauts_of_-a-9_1643150435293.jpg)
+**美国授权撤离驻华大使馆后中共国官宣哑口无言，但战狼媒体一片混乱。新华社虽然不敢报道美国驻华大使馆事件，却对美军F35系列战机坠毁在南海颇感兴趣。美军卡尔文森号发言人称，他们担心中共国已经或正在获取美军“绝密隐身技术”。罕见的是，F35战机三个月已经两次坠毁，背后都有中俄身影。**
 
-芯片危机正在威胁包括美国在内的世界上最工业化国家的经济复苏， 2021年，芯片平均需求较2019年增长17%，但供应量却没有相应增加。专家认为芯片延迟将持续到 2023 年，甚至会到 2025 年。
+据中共国新华社27日消息，美国当地时间24日，美国第七舰队证实一架F-35C战机试图降落在航母时发生事故，撞上飞行甲板，并坠入南海。中共国国防部新闻发言人谭克非大校曾表示，美方打着“航行自由”的幌子在南海炫耀武力，成为南海紧张局势的直接推手。这是中共国利用发生的事实掩盖中俄联手偷盗美军F35战机隐身技术的幌子。
 
-芯片短缺可能会在很长一段时间内继续拖累汽车和电子设备（如个人电脑和智能手机）的生产。这种情况会助长通货膨胀，严重危及经济复苏。各国正试图通过直接解决芯片制造商的问题来消除任何类型的中介，以期望通过增加美国和欧洲的产量来解决芯片危机。
+根据《[每日邮报](https://www.dailymail.co.uk/news/article-10440323/Seven-sailors-board-USS-Carl-Vinson-South-China-Sea-injured-94-million-F-35C-fighter-jet-crashes-trying-land-deck.html)》25日消息称，“这架价值 1 亿美元、专为海军作战定制的 F-35 战机坠海事件已是三个月内第二次在海上损失。”令人惊讶的是，中俄都对F35战斗机隐形技术感兴趣，2021年11月18日，《每日邮报》同样报道了“英国 F-35 隐形战斗机坠入地中海时，美国要求加入搜寻这架飞机的行动，以阻止俄罗斯获取并恢复战机上的秘密技术。”对此《每日邮报》继续跟踪报道称，“皇家海军潜艇正在与俄罗斯人竞争，以从地中海底部回收一架坠毁的价值 1 亿英镑的喷气式飞机，该飞机是由美国设计的且采用了绝密技术，包括绝密雷达和传感器，技术非常敏感，因为它能使 F-35 以超音速在敌方领土“隐身”飞行。但是，[由于间谍活动，中共很可能已经知道有关这架喷气式飞机的所有信息](https://www.dailymail.co.uk/news/article-10214377/Navy-rushes-recover-100m-F-35B-jet-sea-bed-pilot-ditched.html)。”
 
-很明显，解决这场长期危机的唯一办法是重建国家制造能力。欧盟将在 2 月初提出欧洲芯片法案，这将有助于加强欧洲一流的生产和创新能力，并支持欧洲制造工厂，这也将使整个欧洲受益。
+- ***延展阅读：***[***英国在海底找到F-35隐形战机残骸***](https://www.thenationalnews.com/world/uk-news/2021/11/30/british-f-35-stealth-fighter-wreckage-found-on-seabed/)
+- ***延展阅读：***[***美国海军正努力从南中国海回收F-35***](https://www.aljazeera.com/news/2022/1/26/us-navy-works-to-recover-f35-from-south-china-sea)
 
-原文链接：[https://www.today.it/economia/crisi-chip-puo-davvero-chiudere-fabbriche.html](https://www.today.it/economia/crisi-chip-puo-davvero-chiudere-fabbriche.html)
 
-责任编辑/发布：意大利达芬奇农场   萧亦
+《每日邮报》证实了F35隐形舰载战斗机坠毁的不寻常，消息称，周一，美国F-35隐形战斗机在卡尔文森号航空母舰上发生“[着陆事故](https://www.dailymail.co.uk/news/article-10440323/Seven-sailors-board-USS-Carl-Vinson-South-China-Sea-injured-94-million-F-35C-fighter-jet-crashes-trying-land-deck.html)”后，美国面临着一场与中共的竞赛，以回收一架坠入南海的 F-35 隐形战机。担心美国最先进喷气式飞机的秘密技术可能落入敌人手中。”
 
+从中可见，美军F35舰载战斗机失控，很有可能是解放军牵引技术暗箭伤人所为，虽没有可靠的消息证实，但这已经不是第一次发生此类事故，众所周知，美军战机坠毁事故非常少见，为何屡次在坠毁都有中俄的身影？
+
+美国第 7 舰队发言人告诉《每日邮报》， “我们无法推测中共国在这件事上的意图是什么。为了避免最先进的战机落入中共国手中，将给海军留下一个复杂的打捞任务。因为F-35C 是唯一一款设计用于在航空母舰上运行的远程隐形攻击战斗机。
+
+2022年1月27日
+
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
