--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈“木”
+title: 新中国联邦蓝五行为水是共产党红的克星
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917764/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917806/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
