--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,30 +1,20 @@
 ---
-title: 解放军正在试图获取南海坠毁的美军 F35战机隐身技术
+title: 美日就新一代核“高速反应堆”进行技术合作协商
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1917818/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1917847/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://lh4.googleusercontent.com/f-YiPuD5ClaaprW1cTuIA2zWhk73RmKbSpNBBTSQpSofnWjmUuoIvGEaAFAk4wxfV2on0yd480OepyDaeHKzHT3uM0JcoyzHyFcRszQdyCFpABFyLF_rR32AfS38QdZFTNN9hY2E)[*图片来源*](https://i.dailymail.co.uk/1s/2022/01/25/22/53333001-10440323-Sailors_taxi_an_F_35C_Lightning_II_assigned_to_the_Argonauts_of_-a-9_1643150435293.jpg)
-**美国授权撤离驻华大使馆后中共国官宣哑口无言，但战狼媒体一片混乱。新华社虽然不敢报道美国驻华大使馆事件，却对美军F35系列战机坠毁在南海颇感兴趣。美军卡尔文森号发言人称，他们担心中共国已经或正在获取美军“绝密隐身技术”。罕见的是，F35战机三个月已经两次坠毁，背后都有中俄身影。**
+撰稿：东京樱花团/ haruka春香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2244.png)图片来源于本文链接
+对于新一代原子炉之一的“高速炉”的开发，日本原子力研究开发机构和三菱重工等与美国原子力能源企业交换了备忘录，开始协商技术合作。
 
-据中共国新华社27日消息，美国当地时间24日，美国第七舰队证实一架F-35C战机试图降落在航母时发生事故，撞上飞行甲板，并坠入南海。中共国国防部新闻发言人谭克非大校曾表示，美方打着“航行自由”的幌子在南海炫耀武力，成为南海紧张局势的直接推手。这是中共国利用发生的事实掩盖中俄联手偷盗美军F35战机隐身技术的幌子。
+高速反应堆在发电过程中可以减少核电站废燃料中放射性废弃物，被称为“下一代核反应堆”，美国的原子能企业“terra power”在能源部的支援下，计划从2028年开始运行。1月26日，关于terra power，国内进行研究开发的日本原子能研究开发机构、三菱重工及其子公司之间交换了备忘录。正在开发的高速反应堆，控制反应堆热量的冷却剂不是水，而是钠。国内有2个相同类型的高速增殖反应堆，其中位于福井县的高速增殖反应堆“monju”在开始试运行后的22年中，只有250天启动，没有找到实用化的道路，6年前决定废弃。根据原子能机构的介绍，今后将和terra power具体协商能否再利用monju的技术。
 
-根据《[每日邮报](https://www.dailymail.co.uk/news/article-10440323/Seven-sailors-board-USS-Carl-Vinson-South-China-Sea-injured-94-million-F-35C-fighter-jet-crashes-trying-land-deck.html)》25日消息称，“这架价值 1 亿美元、专为海军作战定制的 F-35 战机坠海事件已是三个月内第二次在海上损失。”令人惊讶的是，中俄都对F35战斗机隐形技术感兴趣，2021年11月18日，《每日邮报》同样报道了“英国 F-35 隐形战斗机坠入地中海时，美国要求加入搜寻这架飞机的行动，以阻止俄罗斯获取并恢复战机上的秘密技术。”对此《每日邮报》继续跟踪报道称，“皇家海军潜艇正在与俄罗斯人竞争，以从地中海底部回收一架坠毁的价值 1 亿英镑的喷气式飞机，该飞机是由美国设计的且采用了绝密技术，包括绝密雷达和传感器，技术非常敏感，因为它能使 F-35 以超音速在敌方领土“隐身”飞行。但是，[由于间谍活动，中共很可能已经知道有关这架喷气式飞机的所有信息](https://www.dailymail.co.uk/news/article-10214377/Navy-rushes-recover-100m-F-35B-jet-sea-bed-pilot-ditched.html)。”
+另一方面，对于包括高速炉在内的新一代原子炉在国内使用问题，经济产业大臣荻生田在本月7日的记者会上表示:“目前，还没有想到在国内进行新建设。”
 
-- ***延展阅读：***[***英国在海底找到F-35隐形战机残骸***](https://www.thenationalnews.com/world/uk-news/2021/11/30/british-f-35-stealth-fighter-wreckage-found-on-seabed/)
-- ***延展阅读：***[***美国海军正努力从南中国海回收F-35***](https://www.aljazeera.com/news/2022/1/26/us-navy-works-to-recover-f35-from-south-china-sea)
+信息来源： [次世代原子炉「高速炉」開発で日米が覚書 技術協力など協議へ](https://www3.nhk.or.jp/news/html/20220127/k10013451941000.html?utm_int=news-culture_contents_list-items_005)
 
-
-《每日邮报》证实了F35隐形舰载战斗机坠毁的不寻常，消息称，周一，美国F-35隐形战斗机在卡尔文森号航空母舰上发生“[着陆事故](https://www.dailymail.co.uk/news/article-10440323/Seven-sailors-board-USS-Carl-Vinson-South-China-Sea-injured-94-million-F-35C-fighter-jet-crashes-trying-land-deck.html)”后，美国面临着一场与中共的竞赛，以回收一架坠入南海的 F-35 隐形战机。担心美国最先进喷气式飞机的秘密技术可能落入敌人手中。”
-
-从中可见，美军F35舰载战斗机失控，很有可能是解放军牵引技术暗箭伤人所为，虽没有可靠的消息证实，但这已经不是第一次发生此类事故，众所周知，美军战机坠毁事故非常少见，为何屡次在坠毁都有中俄的身影？
-
-美国第 7 舰队发言人告诉《每日邮报》， “我们无法推测中共国在这件事上的意图是什么。为了避免最先进的战机落入中共国手中，将给海军留下一个复杂的打捞任务。因为F-35C 是唯一一款设计用于在航空母舰上运行的远程隐形攻击战斗机。
-
-2022年1月27日
-
-*校对：东京樱花团 / 東洋武士*
-*发布：东京樱花团 / 平安卿卿*
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
