--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,19 +1,23 @@
 ---
-title: 我们是团队作战，只有团结才能灭共
+title: 细胞老化是造成中共病毒后遗症的原因之一吗？
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917776/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1917819/)
 
-编辑/整理：澳雅大直播工作组视频剪辑小队
+撰稿：东京樱花团｜盖特第一批注册
+![](https://lh4.googleusercontent.com/c0L2yj5ZpNGOoo10VnlSE1sM4wVXtYvYBdGME-rIYTG2orQtpOHhNiFNG-lSsykoLWNwIQ7RXPTfIy0u_u7gBXef-4k9Bt1L_LgvbiOU6aq5Z7vbjEtd9-bGrbWeCfrjNqvnvTRC)[*图片来源*](https://image.news.livedoor.com/newsimage/stf/1/6/16b9f_1509_ddd84c28_d1c83073.jpg)
+感染中共病毒（新冠病毒）后往往会引起后遗症，如疲劳、头痛和脱发等，即使在病毒消失后也是如此。
 
-*发布：*Frank2021
+大阪大学微生物疾病研究所原英二教授研究团队在动物实验中发现，感染会促进细胞“老化”，而老化的细胞会引起周围细胞产生炎症，这种炎症可能是造成后遗症的一个因素。
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+该团队一直致力于研究“细胞老化”课题。 细胞老化表现为受损的细胞虽然停止分裂仍然继续存活并向它周围的细胞传播炎症因子。癌症、动脉硬化等疾病都是由细胞老化引起的。
 
+研究发现：被中共病毒感染的人体细胞会在几天内死亡，病毒随即消失。然而在死亡之前，这些细胞会释放出一种促进细胞衰老的物质，使得周围的细胞衰老并继续传播炎症因子。
+
+信息源：[**新型コロナ、後遺症の一因は細胞老化？　炎症起こす物質まき散らす**](https://news.livedoor.com/article/image_detail/21576149/?img_id=32046920)
+
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
