--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥宣布甜蜜蜜行动3
+title: 不让病毒溯源直接战争
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921763/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921953/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
