--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 美国宣布撤离中国大使馆2
+title: 共产党挑战美国就是扯淡
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921882/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921988/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
