--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦宣言对于中国人就是太阳
+title: 树倒胡孙散
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921928/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922047/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
