--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 中国没有美国大使，我们的影响
+title: 灭共是为了更好的生活
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921899/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922013/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
