--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 希望美使馆工作人员能够有尊严的离开
+title: 新中国联邦上天神秘力量来源（一）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922077/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922188/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
