--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党挑战美国就是扯淡
+title: 树倒胡孙散
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921988/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922047/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
