--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 美国撤大使馆军队最收益避免成炮灰
+title: 美国人应该感谢我们唤醒他们
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921975/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922035/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
