--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 美国人应该感谢我们唤醒他们
+title: 将有大量资金和人员外逃
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922035/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922122/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
