--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,19 +1,30 @@
 ---
-title: 樱花头条│日本将对标“马格尼斯基法案”制裁中共 电台公开报道中共人权问题预热
+title: 我们要有联合行动，集体的力量
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1922569/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922712/)
 
-撰稿：东京樱花团/樱花传媒
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2311.png)
-2022年１月28日的日本电视节目，引用2012年在美国颁布实施的《马格尼茨基法治问责法》，联系当前欧美对中共人权问题的批判和制裁，深入解析中共国人权问题。
+整理：雅典娜速记组
+编辑：星谕
+![](https://assets.gnews.org/wp-content/uploads/2022/01/我们要有联合行动，集体的力量_01.jpg)
+你们所有的行为，兄弟姐妹，90%以上的人都是天真的小孩子级别。
 
-此举被认为是在为日本政府即对中共人权问题采取的制裁行动进行预热。
+绝对不是你家里边抽屉里面土里埋现金，弄点青蒿素，弄点维菌素，藏点散银子你就能活下去，绝对不是。
 
-《马格尼茨基人权问责法》（英语：The Global Magnitsky Human Rights Accountability Act），对违反人权及国外显著腐败人士实施[制裁](https://zh.wikipedia.org/wiki/%E5%88%B6%E8%A3%81)，例如禁止入境、冻结并禁止官员在美国的财产交易。
+首要就两条，
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+第一条一定要和新中国，农场联合行动，我们要有集体的力量。
+第二条，集体的给你的帮助是你个人无法实现的。
+
+2021年11月28日大直播
+
+发布： 星谕
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
