--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 举世无双的一场重大成功奥运会
+title: 甜蜜蜜运动会像茉莉花运动
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922568/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922711/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
