--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,32 +1,58 @@
 ---
-title: 中共联俄意欲发动两场战争的如意算盘落空
+title: 普京知道乌克兰不会攻击俄罗斯
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1922547/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1922667/)
 
-**【国内新闻短评】**
+[https://gtv.org/video/id=61f29a8f87664c47acdacddf](https://gtv.org/video/id=61f29a8f87664c47acdacddf)
 
-据新浪网2022年01月25日报道：美俄博弈加剧，乌克兰局势恶化。专家点评，乌克兰局势会加重美国与欧洲矛盾，美国将会优先考虑乌克兰局势。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2310.png)图片来源： 新浪
-**短评：**
+Mike Pompeo: Putin knows that Ukraine is not going to attack Russia
+普京知道乌克兰不会攻击俄罗斯
 
-俄罗斯陈兵乌克兰边境，美国一边和俄罗斯在欧洲谈判，一边进行军事部署，向乌克兰运武器和部队，要求驻乌克兰使馆工作人员撤离。每当世界有动荡发生，就是中共砖家最兴奋的时刻，第一时间跳出来分析解读局势，恨不得给全世界指引方向。
+Vladimir Putin has wanted to put Russia-friendly leaders in the capital Kyiv and control of the country for awfully long time
+弗拉基米尔·普京(Vladimir Putin)长期以来一直希望将对俄罗斯友好的领导人安置在首都基辅并控制该国
 
-砖家既不在美国，也不在俄罗斯，为何得出美国会遭遇矛盾，优先考虑乌克兰局势呢？常言道“事出反常必有妖”，郭先生多次提到乌克兰和中共的密切关系，指出中共花大价钱收买俄罗斯，想要同时发动亚欧两场战争，使得美国分身无术，无力派兵针对中共，从而实现武力占领台湾。
+and now he’s tried to do so through.
+现在他正试图做到这一点
 
-郭先生近日爆料，中共为了让普京出席冬奥会，已经花费一千万美金。现在又出大价钱，和俄罗斯唱“二人转”演戏，俄罗斯有可能假戏真做，直取基辅，让乌克兰跪下，最后美国被迫加入战争，消灭邪恶力量，方式取决于局势变化。
+Political gamesmanship, coercion all kinds of things, of the tools that statecrafts are not overt,
+政治手段，胁迫各种东西，以及不公开的治国手段
 
-美国总统拜登宣布，如果俄罗斯入侵乌克兰，美国不打算部署军队，但会针对俄罗斯和普京进行经济制裁。今早郭先生提前宣布，美国以疫情为由，即日起，撤离北京大使馆，开启灭共第三道大门。现在美国又不在乌克兰部属军队，其主要兵力将针对中共。没有了中共经济支撑的俄罗斯，精明如普京，到底作何进退？相信号称“双头鹰”的俄罗斯定会最终给中共致命一击。至此，中共想发动两场战争的如意算盘彻底落空。
+now he appears to be massing troops, not only inside western Russia, but inside Belarus as well.
+现在他似乎正在集结军队，不仅在俄罗斯西部，而且在白俄罗斯境内
 
-“机关算尽太聪明，反误了卿卿性命”既是中共的宿命，也是新中国联邦人对中共的准确评价。
+A short run down into Ukraine from there, preparing coercive force capacity to change what Ukraine people want from where they are today
+从那里进入乌克兰，准备强制力量改变乌克兰人民今天想要的独立、自由
 
-文章观点仅代表作者个人，与gnews平台无关
+With President Zelensky running an important country, a country that matters the United States, and he wants to put someone friendly to Russia.
+泽连斯基总统管理着一个重要的国家，一个对美国至关重要的国家，普京想找一个对俄罗斯友好的人
 
-新闻链接：[**https://news.sina.com.cn/w/2022-01-25/doc-ikyakumy2393905.shtml**](https://news.sina.com.cn/w/2022-01-25/doc-ikyakumy2393905.shtml)
+So he put this in the newspapers and brought it up on the Russia outlets, this is a Russian propaganda.
+所以他把这个放在报纸上，放在俄罗斯的媒体上，这是俄罗斯的宣传
 
-素材：洛杉矶盘古农场 — Poplar
-评论：洛杉矶盘古农场 — Poplar
-审核：洛杉矶盘古农场 — 心照
-发布：洛杉矶盘古农场 — 恩典
+Vladimir Putin knows that Ukraine is not going to attack Russia.
+弗拉基米尔普京知道乌克兰不会攻击俄罗斯
+
+To suggest somehow that there’s a threat from NATO or from Ukraine is just propaganda, an excuse for Vladimir Putin to do what he ultimately wants,
+以某种方式暗示存在来自北约或乌克兰的威胁只是宣传，是弗拉基米尔普京做他最终想要做的事情的借口
+
+which is to extend his influence, his authority, his power, his control into the former Warsaw Pact countries.
+即将他的影响力、他的权威、他的权力、他的控制权扩展到前华约国家
+
+* * *
+
+Date:01/24/2022
+原视频标题: Putin knows that Ukraine is not going to attack Russia
+普京知道乌克兰不会攻击俄罗斯
+原视频日期：2022/01/23
+原视频链接: [**https://twitter.com/mikepompeo/status/1485361579377967106?s=24**](https://twitter.com/mikepompeo/status/1485361579377967106?s=24)
+任务编号：KE366（3583）
+视频时间段 : 0:00-1:02
+英听校：洛杉矶盘古农场 – Raul
+翻译：洛杉矶盘古农场 – Raul
+翻译终校：洛杉矶盘古农场 – Mike LI
+字幕+视频制作：洛杉矶盘古农场-文新
+审片：洛杉矶盘古农场-银龙
+发布：洛杉矶盘古农场-恩典
 [![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
 洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
