--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,25 +1,28 @@
 ---
-title: 1.27大直播后记：不断不交
+title: 习近平为什么要打台湾
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922631/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922803/)
 
 整理：雅典娜速记组
-编辑：Rianna
+编辑：星谕
+![](https://assets.gnews.org/wp-content/uploads/2022/01/习近平为什么要打台湾_01.jpg)
+习近平早期学习阶段就接触到毛泽东的著作，当时毛泽东的著作里边有很多没有公开对台湾的陈述。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/A@M4PXQYH0BUYZ6W.png)图片来源：雅典娜设计组（嘿虎）
+后来习近平在总参的时候写过一本书关于中国中国共产党的历史责任，就
+是要尽快解放台湾。
 
+这本书受到很多老革命的夸奖，这些夸赞的话就把他推向另外一个极端。
 
-接下来就是共产党在美国大使馆撤以后，全世界都可以揍它什么概念。我告诉大家，是美国在全联合国，在全世界面前见了1979年大使馆中美恢复建交，它才合法地有权力把台湾踢出去。美国这次的授权撤离，绝对不是绝交，也不是断交，美国人是跟它不断不交弄死它。记住，我今天，我第一个说词叫不断不交。啥叫不断不交？成天告诉你“我要回来啦，我要回来啦”，甚至真的几个人回去表现表现，你给我点这个，给我点那个。看看那南斯拉夫，还有伊拉克当年大使馆玩的是什么，就是直接性的，就是内部，这是国家的政策，跟两党都没关系，这是美国人的决定。千万记住，这不是美国政治决定，这是美国国家安全的选择。我再说一遍，美国20年了，准备好就干掉这几个国家的政权，从来没停止过。跟任何总统党派无关。
+他就认为台湾是他的大事，并且一心觉得打了台湾，他就是中国秦始皇。
 
-这个行动就是告诉你，我现在就不会断，也不会交，不断不交弄死你，共产党会被玩死。昨天下午，最起码100多个国际金融机构和公司，和30几个大的国际，大家都知道，打着所谓的NGO的名义实际是国际的合法的公益机构，要开始研究美国如何开始制裁中共的高官在海外的资产，如何配合，如何查封。这一步绝不亚于不断不交的授权撤离，要把共产党的官的钱属于中国人的钱，在海外要开始查封。一旦这个宣布，大家知道意味什么？抽你的筋，断交和断掉你的血，放掉你的血，查封你的资产。甜蜜蜜运动圆满成功，太棒了，我再给他加冲锋衣，大家记住的。
+2021年11月28日大直播
 
-*发布：*tianzhihuan
+发布： 星谕
 
-**更多资讯，请关注：**
+更多资讯，请关注：
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
