--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,9 +1,9 @@
 ---
-title: 过去政策始终将制药行业的利益置于美国公民福祉之上
+title: 瑞德西韦有毒但是联邦政府鼓励医院使用该药
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1922470/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1922474/)
 
-01/24/2022 皮埃尔·科里博士列举了世界各地许多早期使用伊维菌素治疗有效的例子，包括巴西的一项大规模新研究。他指出伊维菌素被打压是因为一直以来的政策始终将制药行业的利益置于美国公民福祉之上。
+01/24/2022 保罗·马利克医生说瑞德西韦有毒但是联邦政府开出20%回扣鼓励医院使用该药，而美国国家卫生院等机构无视美国食品药品管理局认证的，诸如伊维菌素等便宜且安全的有效药物。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
