--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,20 +1,27 @@
 ---
-title: 澳大利亚的卡车司机也在行动——卡车司机革命
+title: 习的中国梦来自他崇拜希特勒
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1922605/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922781/)
 
-撰稿：电流声
+整理：雅典娜速记组
+编辑：星谕
+![](https://assets.gnews.org/wp-content/uploads/2022/01/习的中国梦来自他崇拜希特勒_01.jpg)
+我告诉你“习近平疯了”，这是“毒之毒”，“毒之狠”，如果人类在不醒的话, 那么人类该灭了。
 
-澳大利亚卡车司机估计至少有20,000人将前往澳大利亚首都堪培拉，以抗议政府强制接种疫苗，尤其强制儿童接种疫苗。他们将捍卫自由和以此做为自由传递，他们表达出“你们向我们的孩子们下手；现在，我们来啦——堪培拉，我们就为孩子们而战！2022年1月31日，上午10点见！”
+他是希特勒的崇拜者，希特勒最有名的一句“精神病名言”——我以梦游者的自信， 走向我的命运。
 
-2021年12月澳大利亚政府健康官网上公布， 12 月15 日起可为5 至11岁儿童预约疫苗接种。从2022 年1 月10 日起，可为5 至11 岁儿童预约疫苗接种。1月10日开始，澳大利亚5-11岁儿童将可以接种新冠疫苗。
+习近平的中国梦就是这么来。
 
-目前，澳大利亚医疗用品管理局（TGA）和澳大利亚免疫技术咨询小组（ATAGI）都已经批准了将辉瑞澳大利亚有限公司生产的复必泰疫苗（Comirnaty，辉瑞公司研发的新冠疫苗的商品名 ）用于全澳5-11岁儿童的接种推广工作。TGA的批准是“临时批准”，即有效期限为两年。为5-11岁儿童接种的辉瑞疫苗与成年人接种的辉瑞疫苗完全一样，但剂量要少很多，只有10微克，是12岁及以上澳大利亚居民接种的剂量（30微克）的三分之一。
+2021年11月28日大直播
 
-问题是事实上孩子们和家长是没有选择的，没接种疫苗就不能返校。更恐怖的是已经有健康的孩子在接种了疫苗后死亡了！还不行动吗？再不行动能有未来吗？！向卡车司机们——勇士们敬礼！
+发布： 星谕
 
-*编辑&发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
