--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,23 +1,38 @@
 ---
-title: 樱花头条│日美政府首次商谈中共人权问题 或为联合制裁中共做准备
+title: 习的独裁之路
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1922585/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922734/)
 
-撰稿：东京樱花团/NewSGman
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2312.png)[图片来源](https://news.ifeng.com/c/8B0RkqjaqxT)
-1月26日，负责国际[人权事务](https://gettr.com/hashtag/%23%E4%BA%BA%E6%9D%83%E4%BA%8B%E5%8A%A1)的日本首相助理中谷元在网上会见了负责平民保护、[民主](https://gettr.com/hashtag/%23%E6%B0%91%E4%B8%BB)和[人权](https://gettr.com/hashtag/%23%E4%BA%BA%E6%9D%83)的美国副国务卿泽亚。双方同意促进各相关组织之间和层面的意见交流，以深化日美两国在[人权领域](https://gettr.com/hashtag/%23%E4%BA%BA%E6%9D%83%E9%A2%86%E5%9F%9F)的合作。
+整理：雅典娜速记组
+编辑：星谕
+![](https://assets.gnews.org/wp-content/uploads/2022/01/习的独裁之路_01.jpg)
+墨索里尼无后，人类独裁有几个有后的？几乎独裁没有到第二代的，只有一个人
+类的传奇，
 
-中谷先生对美国保护自由民主等，普世价值的决心和举措表示敬意。 泽亚也是西藏问题的特别协调员，据信双方已经讨论过中国的人权问题。
+就是北朝鲜的金家。金家三代。
 
-中谷元同时长期关注中国新疆和香港等地人权状况。现年64岁的中谷元，曾在2001年出任小泉纯一郎内阁的防卫厅长官；2014年，他获时任首相安倍晋三委任为防卫大臣。2021年4月，作为众议员议员的中谷元发起成立“全党议会人权外交联盟”，致力于推动日本版的《全球马格尼茨基人权问责法案》。
+金正日最后搞得差不多的时候，金正恩实现了，习近平和金正恩见面的时候说你完成了你家和北朝鲜最关键的一步就是核武器，金家北朝鲜的事业千秋万代，我习近平将支持你。
 
-《马格尼茨基人权问责法》（英语：The Global Magnitsky Human Rights Accountability Act），对违反人权及国外显著腐败人士实施[制裁](https://zh.wikipedia.org/wiki/%E5%88%B6%E8%A3%81)，例如禁止入境、冻结并禁止官员在美国的财产交易。
+看共产党，看习近平一切这些都是习本人想干的，就像希特勒绑架了当时德国
+打着所谓的要消掉一战失败之辱，
 
-信息来源：[米人権担当とオンライン会談　中谷補佐官](https://www.jiji.com/jc/article?k=2022012600492&amp;g=pol)
+炸掉一战的所有的这个纪念碑，老子要为德国人开辟天下，重新优化人类。这
+就是习近平，
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+我以梦游的境界，走向我的命运。
+
+习他一个人是我们七个爆料革命的总和都不止，没有习是真灭不了共。
+
+2021年11月28日大直播
+
+发布： 星谕
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
